fix: protected attached indexes

--- a/EMS/core-bundle/src/Resources/translations/EMSCoreBundle.en.yml
+++ b/EMS/core-bundle/src/Resources/translations/EMSCoreBundle.en.yml
@@ -329,6 +329,7 @@ log.error: 'This page/action has encountered an error: %error_message%'
 log.file.upload_error: 'Error during file upload: %error_message%'
 log.filter.deleted: 'The filter %filter_name% has been deleted'
 log.index.delete_orphan_index: 'Elasticsearch index %index_name% has been deleted'
+log.index.index_with_aliases: 'The index %index_name% is referenced by %counter% aliases and can''t be deleted'
 log.index.index_not_found: 'Elasticsearch index %index_name% not found'
 log.job.prepared: 'A job %job_id% has been prepared (%command%)'
 log.managed_alias.created: 'Managed alias %managed_alias_name% has been created'
