feat(media-library): upload file

--- a/EMS/core-bundle/src/Resources/translations/emsco-component.en.yml
+++ b/EMS/core-bundle/src/Resources/translations/emsco-component.en.yml
@@ -4,3 +4,6 @@ media_library:
             title: 'Add folder'
             submit: 'Create'
             cancel: 'Cancel'
+    file:
+        add:
+            title: 'Upload'
