feat(media-library): print files with url and refactor styling

--- a/EMS/core-bundle/src/Resources/translations/emsco-mimetypes.en.yml
+++ b/EMS/core-bundle/src/Resources/translations/emsco-mimetypes.en.yml
@@ -60,3 +60,4 @@ audo/3gpp2: '3GPP2 audio container'
 application/x-7z-compressed: '7-zip archive'
 image/png: 'PNG image'
 text/plain: 'Text file'
+text/xml: 'XML file'
