--- a/EMS/core-bundle/src/Resources/translations/emsco-forms.en.yml
+++ b/EMS/core-bundle/src/Resources/translations/emsco-forms.en.yml
@@ -47,6 +47,7 @@ ROLE_SUPER_PUBLISHER: 'Super Publisher'
 ROLE_SUPER_USER: 'Super User'
 ROLE_SUPER_WEBMASTER: 'Super Webmaster'
 ROLE_TASK_MANAGER: 'Task Manager'
+ROLE_COPYWRITER: 'Copywriter'
 ROLE_TRADUCTOR: Traductor
 ROLE_USER: User
 ROLE_USER_MANAGEMENT: 'User Management'
