fix: owner becomes requester
Now everybody can create tasks.
Removed owner role for contentType and revision.

--- a/EMS/core-bundle/src/Resources/translations/EMSCoreBundle.en.yml
+++ b/EMS/core-bundle/src/Resources/translations/EMSCoreBundle.en.yml
@@ -493,17 +493,10 @@ table.index.column.actions: Actions
 table.index.column.loop_count: '#'
 table.index.empty: 'Nothing to show here'
 task.assigned_to: 'Assigned to '
-task.change_owner.change: 'New owner'
-task.change_owner.current: 'The current owner for document "%revision%" is "%owner%"'
-task.change_owner.missing: 'The document "%revision%" has no owner'
-task.change_owner.submit: Change
-task.change_owner.success: 'Successfully changed ownership!'
-task.change_owner.title: 'Change owner for %revision%'
 task.create.button: 'Add a task'
 task.create.submit: 'Create task'
 task.create.success: 'Task "%title%" successfully created.'
 task.create.title: 'Add a new task'
-task.dashboard.action.change_owner: 'Change owner'
 task.dashboard.action.edit_revision: 'Edit revision'
 task.dashboard.action.go_revision: Revision
 task.dashboard.column.version_tag: 'New version'
@@ -512,11 +505,11 @@ task.dashboard.column.assignee: Assignee
 task.dashboard.column.deadline: Deadline
 task.dashboard.column.modified: Last modification
 task.dashboard.column.label: Document
-task.dashboard.column.owner: Owner
+task.dashboard.column.requester: Requester
 task.dashboard.column.status: Status
 task.dashboard.column.title: Task
 task.dashboard.tab.manager: 'All tasks'
-task.dashboard.tab.owner: 'Created tasks'
+task.dashboard.tab.requester: 'Requested tasks'
 task.dashboard.tab.user: 'Assigned to me'
 task.delete.submit: 'Delete task'
 task.delete.success: 'Task "%title%" successfully deleted.'
@@ -569,7 +562,7 @@ task.filters: Filters
 task.filter.status: Statuses
 task.filter.version: Versions
 task.filter.assignee: Assignees
-task.filter.owner: Owners
+task.filter.requester: Requesters
 task.filter.submit: Search
 task.filter.reset: Clear
 uploaded-file.action.download_selected: 'Download selected'
