--- a/EMS/xliff/tests/Unit/Resources/Extractions/TC-10/expected_us-ascii2.0.xlf
+++ b/EMS/xliff/tests/Unit/Resources/Extractions/TC-10/expected_us-ascii2.0.xlf
@@ -90,21 +90,20 @@
             <unit id="/html/body/ul/li/ul/li[1]">
               <segment id="/html/body/ul/li/ul/li[1]">
                 <source>
-                &lt;strong&gt;G&lt;sub&gt;1&lt;/sub&gt;&lt;/strong&gt; voor het kwartaal van
-                indienstneming en de 15 daarop volgende kwartalen
-            </source>
+        &lt;strong&gt;G&lt;sub&gt;1&lt;/sub&gt;&lt;/strong&gt; voor het kwartaal van
+        indienstneming en de 15 daarop volgende kwartalen
+      </source>
                 <target/>
               </segment>
             </unit>
             <unit id="/html/body/ul/li/ul/li[2]">
               <segment id="/html/body/ul/li/ul/li[2]">
                 <source>
-                &lt;strong&gt;G&lt;sub&gt;2&lt;/sub&gt;&lt;/strong&gt; voor de daaropvolgende
-                kwartalen, en dit voor zolang hij in dienst is met een
-                startbaanovereenkomst (de vermindering eindigt dus in
-                elk geval in het kwartaal waarin de jongere 26 jaar
-                wordt).
-            </source>
+        &lt;strong&gt;G&lt;sub&gt;2&lt;/sub&gt;&lt;/strong&gt; voor de daaropvolgende
+        kwartalen, en dit voor zolang hij in dienst is met een
+        startbaanovereenkomst (de vermindering eindigt dus in elk
+        geval in het kwartaal waarin de jongere 26 jaar wordt).
+      </source>
                 <target/>
               </segment>
             </unit>
