--- a/EMS/xliff/tests/Unit/Resources/Extractions/TC-11/expected_UTF-81.2.xlf
+++ b/EMS/xliff/tests/Unit/Resources/Extractions/TC-11/expected_UTF-81.2.xlf
@@ -143,42 +143,54 @@
       <group id="[%locale%][body2]">
         <trans-unit restype="x-html-p" id="/html/body/p[1]">
           <source xml:lang="en">
-     
+   
 </source>
           <target xml:lang="fr" state="new"/>
         </trans-unit>
         <trans-unit restype="x-html-p" id="/html/body/p[2]">
           <source xml:lang="en">
-    Een speciale uitsluitingsregeling is - op basis van artikel 17quater van het koninklijk besluit van 28 november 1969 - van toepassing op de volgende personen:
+  Een speciale uitsluitingsregeling is - op basis van artikel
+  17quater van het koninklijk besluit van 28 november 1969 - van
+  toepassing op de volgende personen:
 </source>
           <target xml:lang="fr" state="new"/>
         </trans-unit>
         <group restype="x-html-ul" id="/html/body/ul[1]">
           <trans-unit restype="listitem" id="/html/body/ul[1]/li[1]">
-            <source xml:lang="en">de vrijwillige brandweerlieden en de vrijwillige ambulanciers van een hulpverleningszone;
-    </source>
+            <source xml:lang="en">de vrijwillige brandweerlieden en de vrijwillige
+  ambulanciers van een hulpverleningszone;
+  </source>
             <target xml:lang="fr" state="new"/>
           </trans-unit>
           <trans-unit restype="listitem" id="/html/body/ul[1]/li[2]">
-            <source xml:lang="en">de vrijwillige hulpverleners-ambulanciers van een door de Minister van Volksgezondheid erkende ambulancedienst die in het bezit zijn van een brevet afgeleverd door een opleidings- en vervolmakingscentrum voor hulpverleners;
-    </source>
+            <source xml:lang="en">de vrijwillige hulpverleners-ambulanciers van een door de
+  Minister van Volksgezondheid erkende ambulancedienst die in het
+  bezit zijn van een brevet afgeleverd door een opleidings- en
+  vervolmakingscentrum voor hulpverleners;
+  </source>
             <target xml:lang="fr" state="new"/>
           </trans-unit>
           <trans-unit restype="listitem" id="/html/body/ul[1]/li[3]">
             <source xml:lang="en">de vrijwilligers van de Civiele Bescherming.
-    </source>
+  </source>
             <target xml:lang="fr" state="new"/>
           </trans-unit>
         </group>
         <trans-unit restype="x-html-p" id="/html/body/p[3]">
           <source xml:lang="en">
-    De &lt;strong&gt;vergoedingen voor 'uitzonderlijke' prestaties&lt;/strong&gt; die de vrijwillige brandweerlieden, de vrijwilligers van de Civiele Bescherming en de vrijwillige ambulanciers uitvoeren bij de organisaties die hen tewerkstellen, zijn altijd vrijgesteld van socialezekerheidsbijdragen, ongeacht het bedrag van de vergoeding. 
+  De &lt;strong&gt;vergoedingen voor 'uitzonderlijke'
+  prestaties&lt;/strong&gt; die de vrijwillige brandweerlieden, de
+  vrijwilligers van de Civiele Bescherming en de vrijwillige
+  ambulanciers uitvoeren bij de organisaties die hen
+  tewerkstellen, zijn altijd vrijgesteld van
+  socialezekerheidsbijdragen, ongeacht het bedrag van de
+  vergoeding. 
 </source>
           <target xml:lang="fr" state="new"/>
         </trans-unit>
         <trans-unit restype="x-html-p" id="/html/body/p[4]">
           <source xml:lang="en">
-    Als 'uitzonderlijke' prestaties worden beschouwd:
+  Als 'uitzonderlijke' prestaties worden beschouwd:
 </source>
           <target xml:lang="fr" state="new"/>
         </trans-unit>
@@ -199,12 +211,13 @@
             <group restype="x-html-ul" html:style="padding-top: 0px; padding-bottom: 0px;" id="/html/body/ul[2]/li[1]/ul">
               <trans-unit restype="listitem" id="/html/body/ul[2]/li[1]/ul/li[1]">
                 <source xml:lang="en">kolom 1 en punt 6 voor de vrijwillige brandweerlieden;
-            </source>
+      </source>
                 <target xml:lang="fr" state="new"/>
               </trans-unit>
               <trans-unit restype="listitem" id="/html/body/ul[2]/li[1]/ul/li[2]">
-                <source xml:lang="en">kolom 2 en de punten 5 en 6 voor de vrijwilligers van de Civiele Bescherming;
-            </source>
+                <source xml:lang="en">kolom 2 en de punten 5 en 6 voor de vrijwilligers van
+      de Civiele Bescherming;
+      </source>
                 <target xml:lang="fr" state="new"/>
               </trans-unit>
             </group>
@@ -216,8 +229,14 @@
             </trans-unit>
             <group restype="x-html-ul" html:style="padding-top: 0px; padding-bottom: 0px;" id="/html/body/ul[2]/li[2]/ul">
               <trans-unit restype="listitem" id="/html/body/ul[2]/li[2]/ul/li">
-                <source xml:lang="en">het betreft het onmiddellijk verstrekken van aangepaste hulp aan alle personen van wie de gezondheidstoestand ten gevolge van een ongeval, een plotse aandoening of een plotse verwikkeling van een ziekte een dringende tussenkomst vereist na een oproep via het eenvormig oproepstelsel waardoor de hulpverlening, het vervoer en de opvang in een aangepaste ziekenhuisdienst worden verzekerd.
-            </source>
+                <source xml:lang="en">het betreft het onmiddellijk verstrekken van aangepaste
+      hulp aan alle personen van wie de gezondheidstoestand ten
+      gevolge van een ongeval, een plotse aandoening of een
+      plotse verwikkeling van een ziekte een dringende
+      tussenkomst vereist na een oproep via het eenvormig
+      oproepstelsel waardoor de hulpverlening, het vervoer en de
+      opvang in een aangepaste ziekenhuisdienst worden verzekerd.
+      </source>
                 <target xml:lang="fr" state="new"/>
               </trans-unit>
             </group>
@@ -225,66 +244,92 @@
         </group>
         <trans-unit restype="x-html-p" id="/html/body/p[5]">
           <source xml:lang="en">
-    De &lt;strong&gt;vergoedingen voor 'niet-uitzonderlijke' prestaties&lt;/strong&gt; zijn vrijgesteld voor zover het bedrag van 785,95 EUR per kwartaal (niet geïndexeerd) niet overschreden wordt. Het geïndexeerd bedrag van de vergoedingen dat vrijgesteld is van socialezekerheidsbijdragen, bedraagt &lt;span class="newWord"&gt;1.191,26 EUR&lt;/span&gt; per kwartaal vanaf het &lt;span class="newWord"&gt;2&lt;sup&gt;de&lt;/sup&gt; kwartaal van 2022&lt;/span&gt;.
+  De &lt;strong&gt;vergoedingen voor 'niet-uitzonderlijke'
+  prestaties&lt;/strong&gt; zijn vrijgesteld voor zover het bedrag van
+  785,95 EUR per kwartaal (niet geïndexeerd) niet overschreden
+  wordt. Het geïndexeerd bedrag van de vergoedingen dat
+  vrijgesteld is van socialezekerheidsbijdragen, bedraagt
+  &lt;span class="newWord"&gt;1.191,26 EUR&lt;/span&gt; per kwartaal vanaf
+  het &lt;span class="newWord"&gt;2&lt;sup&gt;de&lt;/sup&gt; kwartaal van
+  2022&lt;/span&gt;.
 </source>
           <target xml:lang="fr" state="new"/>
         </trans-unit>
         <trans-unit restype="x-html-p" id="/html/body/p[6]">
           <source xml:lang="en">
-     
+   
 </source>
           <target xml:lang="fr" state="new"/>
         </trans-unit>
         <group restype="x-html-div" html:class="readMoreContent" id="/html/body/div">
           <trans-unit restype="x-html-p" id="/html/body/div/p">
             <source xml:lang="en">
-        &lt;strong&gt;Voorgaande kwartalen&lt;/strong&gt;
-    </source>
+    &lt;strong&gt;Voorgaande kwartalen&lt;/strong&gt;
+  </source>
             <target xml:lang="fr" state="new"/>
           </trans-unit>
           <group restype="x-html-ul" id="/html/body/div/ul">
             <trans-unit restype="listitem" id="/html/body/div/ul/li[1]">
-              <source xml:lang="en">1.078,95 EUR van het 1&lt;sup&gt;ste&lt;/sup&gt; kwartaal van 2018 tot het 3&lt;sup&gt;de&lt;/sup&gt; kwartaal van 2018 (alle categorieën);
-        </source>
+              <source xml:lang="en">1.078,95 EUR van het 1&lt;sup&gt;ste&lt;/sup&gt; kwartaal van 2018
+    tot het 3&lt;sup&gt;de&lt;/sup&gt; kwartaal van 2018 (alle categorieën);
+    </source>
               <target xml:lang="fr" state="new"/>
             </trans-unit>
             <trans-unit restype="listitem" id="/html/body/div/ul/li[2]">
-              <source xml:lang="en">1.100,49 EUR van het 4&lt;sup&gt;de&lt;/sup&gt; kwartaal van 2018 tot het 1&lt;sup&gt;ste&lt;/sup&gt; kwartaal van 2020 (alle categorieën);
-        </source>
+              <source xml:lang="en">1.100,49 EUR van het 4&lt;sup&gt;de&lt;/sup&gt; kwartaal van 2018 tot
+    het 1&lt;sup&gt;ste&lt;/sup&gt; kwartaal van 2020 (alle categorieën);
+    </source>
               <target xml:lang="fr" state="new"/>
             </trans-unit>
             <trans-unit restype="listitem" id="/html/body/div/ul/li[3]">
-              <source xml:lang="en">1.122,49 EUR van het 2&lt;sup&gt;de&lt;/sup&gt; kwartaal van 2020 tot het 3&lt;sup&gt;de&lt;/sup&gt; kwartaal van 2021 (alle categorieën);
-        </source>
+              <source xml:lang="en">1.122,49 EUR van het 2&lt;sup&gt;de&lt;/sup&gt; kwartaal van 2020 tot
+    het 3&lt;sup&gt;de&lt;/sup&gt; kwartaal van 2021 (alle categorieën);
+    </source>
               <target xml:lang="fr" state="new"/>
             </trans-unit>
             <trans-unit restype="listitem" id="/html/body/div/ul/li[4]">
-              <source xml:lang="en">1.144,97 EUR voor het 4&lt;sup&gt;de&lt;/sup&gt; kwartaal van 2021 (alle categorieën);
-        </source>
+              <source xml:lang="en">1.144,97 EUR voor het 4&lt;sup&gt;de&lt;/sup&gt; kwartaal van
+    2021 (alle categorieën);
+    </source>
               <target xml:lang="fr" state="new"/>
             </trans-unit>
             <trans-unit restype="listitem" id="/html/body/div/ul/li[5]">
-              <source xml:lang="en">1.167,84 EUR voor het 1&lt;sup&gt;ste&lt;/sup&gt; kwartaal van 2022 (alle categorieën).
-        </source>
+              <source xml:lang="en">1.167,84 EUR voor het 1&lt;sup&gt;ste&lt;/sup&gt; kwartaal van
+    2022 (alle categorieën).
+    </source>
               <target xml:lang="fr" state="new"/>
             </trans-unit>
           </group>
         </group>
         <trans-unit restype="x-html-p" id="/html/body/p[7]">
           <source xml:lang="en">
-    Indien het maximumbedrag van &lt;span class="newWord"&gt;1.191,26 EUR&lt;/span&gt; overschreden wordt, zijn er persoonlijke en patronale socialezekerheidsbijdragen verschuldigd op het totale bedrag van de vergoedingen voor 'niet-uitzonderlijke' prestaties en niet enkel op het gedeelte boven het drempelbedrag.
+  Indien het maximumbedrag van &lt;span class="newWord"&gt;1.191,26
+  EUR&lt;/span&gt; overschreden wordt, zijn er persoonlijke en
+  patronale socialezekerheidsbijdragen verschuldigd op het totale
+  bedrag van de vergoedingen voor 'niet-uitzonderlijke'
+  prestaties en niet enkel op het gedeelte boven het
+  drempelbedrag.
 </source>
           <target xml:lang="fr" state="new"/>
         </trans-unit>
         <trans-unit restype="x-html-p" id="/html/body/p[8]">
           <source xml:lang="en">
-     
+   
 </source>
           <target xml:lang="fr" state="new"/>
         </trans-unit>
         <trans-unit restype="x-html-p" id="/html/body/p[9]">
           <source xml:lang="en">
-    Een persoon die bij een hulpverleningszone, een erkende ambulancedienst of de Civiele Bescherming  operationele prestaties levert en verbonden is met een arbeidsovereenkomst, een statutaire aanstelling of een dienstencontract, kan bij dezelfde organisatie geen prestaties als vrijwillige brandweerman, vrijwillige ambulancier of vrijwilliger van de Civiele Bescherming meer verrichten. Als de RSZ de cumulatie vaststelt, dan worden alle vergoedingen uit hoofde van de beroepsactiviteit onderworpen aan socialezekerheidsbijdragen. 
+  Een persoon die bij een hulpverleningszone, een erkende
+  ambulancedienst of de Civiele Bescherming  operationele
+  prestaties levert en verbonden is met een arbeidsovereenkomst,
+  een statutaire aanstelling of een dienstencontract, kan bij
+  dezelfde organisatie geen prestaties als vrijwillige
+  brandweerman, vrijwillige ambulancier of vrijwilliger van de
+  Civiele Bescherming meer verrichten. Als de RSZ de cumulatie
+  vaststelt, dan worden alle vergoedingen uit hoofde van de
+  beroepsactiviteit onderworpen aan
+  socialezekerheidsbijdragen. 
 </source>
           <target xml:lang="fr" state="new"/>
         </trans-unit>
