--- a/EMS/xliff/tests/Unit/Resources/Extractions/TC-2/expected_UTF-81.2.xlf
+++ b/EMS/xliff/tests/Unit/Resources/Extractions/TC-2/expected_UTF-81.2.xlf
@@ -24,20 +24,24 @@
       </trans-unit>
       <group id="[%locale%][body]">
         <trans-unit restype="x-html-p" id="/html/body/p">
-          <source xml:lang="en">Hello</source>
-          <target xml:lang="fr" state="needs-translation">Bonjour</target>
+          <source xml:lang="en"> Hello </source>
+          <target xml:lang="fr" state="needs-translation"> Bonjour </target>
         </trans-unit>
       </group>
       <group id="[%locale%][body2]">
         <trans-unit restype="x-html-p" id="/html/body/p">
-          <source xml:lang="en">Hello</source>
-          <target xml:lang="fr" state="needs-translation">Bonjour</target>
+          <source xml:lang="en">
+  Hello
+</source>
+          <target xml:lang="fr" state="needs-translation">
+  Bonjour
+</target>
         </trans-unit>
       </group>
       <group id="[%locale%][body3]">
         <trans-unit restype="x-html-p" id="/html/body/p">
-          <source xml:lang="en">Hello</source>
-          <target xml:lang="fr" state="final">Bonjour</target>
+          <source xml:lang="en"> Hello </source>
+          <target xml:lang="fr" state="final"> Bonjour </target>
         </trans-unit>
       </group>
     </body>
