--- a/EMS/xliff/tests/Unit/Resources/Extractions/TC-5/expected_UTF-82.0.xlf
+++ b/EMS/xliff/tests/Unit/Resources/Extractions/TC-5/expected_UTF-82.0.xlf
@@ -39,19 +39,10 @@
       <unit id="/html/body/p">
         <segment id="/html/body/p">
           <source>
-    This
-
-
-    is
-
-    Mount Hood:
-    &lt;img src="mthood.jpg" alt="Mount Hood with its snow-covered top"/&gt;
+  This is Mount Hood: &lt;img src="mthood.jpg" alt="Mount Hood with its snow-covered top"/&gt;
 </source>
           <target>
-    Ceci
-    est
-    Mount
-    Hood: &lt;img src="mthood.jpg" alt="Mount Hood avec son sommet enneig&amp;#xE9;"/&gt;
+  Ceci est Mount Hood: &lt;img src="mthood.jpg" alt="Mount Hood avec son sommet enneig&amp;#xE9;"/&gt;
 </target>
         </segment>
       </unit>
