--- a/EMS/xliff/tests/Unit/Resources/Extractions/TC-7/expected_UTF-81.2.xlf
+++ b/EMS/xliff/tests/Unit/Resources/Extractions/TC-7/expected_UTF-81.2.xlf
@@ -24,11 +24,11 @@
       </trans-unit>
       <group id="[%locale%][body]">
         <trans-unit restype="x-html-p" html:class="first" id="/html/body/p[1]">
-          <source xml:lang="en"> Hello Mathieu, please visits <g ctype="x-html-a" html:href="https://elasticms.eu/path%20with%20space?a1=value1&amp;a2=value2#anchor"> The elastic<g ctype="bold">ms</g> web site</g> </source>
+          <source xml:lang="en"> Hello Mathieu, please visits <g ctype="x-html-a" html:href="https://elasticms.eu/path%20with%20space?a1=value1&amp;a2=value2#anchor"> <g ctype="italic" html:class="elasticms"/>The elastic<g ctype="bold">ms</g> web site</g> </source>
           <target xml:lang="fr" state="needs-translation"> Bonjour Mathieu<g ctype="x-html-a" html:href="https://elasticms.eu/path%20with%20space?a1=value1&amp;a2=value2#anchor">Le site d´elasticms</g> </target>
         </trans-unit>
         <trans-unit restype="x-html-p" html:style="background-color: #0E2231" id="/html/body/p[2]">
-          <source xml:lang="en"> Hello Mathieu, please visits <g ctype="x-html-a" html:href="https://elasticms.eu/path%20with%20space?a1=value1&amp;a2=value2#anchor"> The elastic<g ctype="bold">ms</g> web site</g> </source>
+          <source xml:lang="en"> Hello Mathieu, please visits <g ctype="x-html-a" html:href="https://elasticms.eu/path%20with%20space?a1=value1&amp;a2=value2#anchor"> <g ctype="italic" html:class="elasticms"/>The elastic<g ctype="bold">ms</g> web site</g> </source>
           <target xml:lang="fr" state="needs-translation"> Bonjour Mathieu<g ctype="x-html-a" html:href="https://elasticms.eu/path%20with%20space?a1=value1&amp;a2=value2#anchor">Le site d´elasticms</g> </target>
         </trans-unit>
       </group>
@@ -36,7 +36,7 @@
         <trans-unit restype="x-html-p" html:class="first" id="/html/body/p[1]">
           <source xml:lang="en">
   Hello Mathieu, please visits &lt;a href="https://elasticms.eu/path%20with%20space?a1=value1&amp;amp;a2=value2#anchor"&gt;
-  The elastic&lt;b&gt;ms&lt;/b&gt; web site&lt;/a&gt;
+  &lt;i class="elasticms"/&gt;The elastic&lt;b&gt;ms&lt;/b&gt; web site&lt;/a&gt;
 </source>
           <target xml:lang="fr" state="needs-translation">
   Bonjour Mathieu&lt;a href="https://elasticms.eu/path%20with%20space?a1=value1&amp;amp;a2=value2#anchor"&gt;Le
@@ -46,7 +46,7 @@
         <trans-unit restype="x-html-p" html:style="background-color: #0E2231" id="/html/body/p[2]">
           <source xml:lang="en">
   Hello Mathieu, please visits &lt;a href="https://elasticms.eu/path%20with%20space?a1=value1&amp;amp;a2=value2#anchor"&gt;
-  The elastic&lt;b&gt;ms&lt;/b&gt; web site&lt;/a&gt;
+  &lt;i class="elasticms"/&gt;The elastic&lt;b&gt;ms&lt;/b&gt; web site&lt;/a&gt;
 </source>
           <target xml:lang="fr" state="needs-translation">
   Bonjour Mathieu&lt;a href="https://elasticms.eu/path%20with%20space?a1=value1&amp;amp;a2=value2#anchor"&gt;Le
@@ -56,11 +56,11 @@
       </group>
       <group id="[%locale%][body3]">
         <trans-unit restype="x-html-p" html:class="first" id="/html/body/p[1]">
-          <source xml:lang="en"> Hello Mathieu, please visits <g ctype="x-html-a" html:href="https://elasticms.eu/path%20with%20space?a1=value1&amp;a2=value2#anchor"> The elastic<g ctype="bold">ms</g> web site</g> </source>
+          <source xml:lang="en"> Hello Mathieu, please visits <g ctype="x-html-a" html:href="https://elasticms.eu/path%20with%20space?a1=value1&amp;a2=value2#anchor"> <g ctype="italic" html:class="elasticms"/>The elastic<g ctype="bold">ms</g> web site</g> </source>
           <target xml:lang="fr" state="final"> Bonjour Mathieu<g ctype="x-html-a" html:href="https://elasticms.eu/path%20with%20space?a1=value1&amp;a2=value2#anchor">Le site d´elasticms</g> </target>
         </trans-unit>
         <trans-unit restype="x-html-p" html:style="background-color: #0E2231" id="/html/body/p[2]">
-          <source xml:lang="en"> Hello Mathieu, please visits <g ctype="x-html-a" html:href="https://elasticms.eu/path%20with%20space?a1=value1&amp;a2=value2#anchor"> The elastic<g ctype="bold">ms</g> web site</g> </source>
+          <source xml:lang="en"> Hello Mathieu, please visits <g ctype="x-html-a" html:href="https://elasticms.eu/path%20with%20space?a1=value1&amp;a2=value2#anchor"> <g ctype="italic" html:class="elasticms"/>The elastic<g ctype="bold">ms</g> web site</g> </source>
           <target xml:lang="fr" state="final"> Bonjour Mathieu<g ctype="x-html-a" html:href="https://elasticms.eu/path%20with%20space?a1=value1&amp;a2=value2#anchor">Le site d´elasticms</g> </target>
         </trans-unit>
       </group>
