--- a/EMS/xliff/tests/Unit/Resources/Integrated/xliffs/1c76d7955634dd771dd0e81d4cc9e7c2bdd52ea7_1017384.xlf
+++ b/EMS/xliff/tests/Unit/Resources/Integrated/xliffs/1c76d7955634dd771dd0e81d4cc9e7c2bdd52ea7_1017384.xlf
@@ -259,6 +259,10 @@
             <target xml:lang="de" state="final"> Als <g ctype="x-html-strong">Übergangsmaßnahme</g> können Arbeitgeber, die Arbeitnehmer eingestellt haben, die vor 01.01.2019 ihren Dienst antraten und <g ctype="x-html-strong">ununterbrochen</g> weiter im Dienst bleiben (mit einem dauerhaften oder anschließenden Arbeitsvertrag), die Ermäßigung für diese Arbeitnehmer für die ihnen verbleibenden Quartale unter den gleichen Bedingungen weiterhin beanspruchen. Es gibt <g ctype="x-html-strong">spezielle Ermäßigungscodes</g> für diese Übergangsmaßnahmen. Es ist kein Enddatum für die Übergangsmaßnahmen vorgesehen.  </target>
           </trans-unit>
         </group>
+        <trans-unit restype="x-html-p" id="/html/body/p[9]">
+          <source xml:lang="nl"/>
+          <target xml:lang="de" state="final"/>
+        </trans-unit>
         <group restype="x-html-div" html:class="message alert" id="/html/body/div[2]">
           <trans-unit restype="x-html-h3" id="/html/body/div[2]/h3">
             <source xml:lang="nl"> Brussels Hoofdstedelijk Gewest: </source>
@@ -273,7 +277,7 @@
           <source xml:lang="nl"> Bedrag van de vermindering </source>
           <target xml:lang="de" state="final"> Betrag der Ermäßigung </target>
         </trans-unit>
-        <trans-unit restype="x-html-p" id="/html/body/p[9]">
+        <trans-unit restype="x-html-p" id="/html/body/p[10]">
           <source xml:lang="nl"> Naast een tussenkomst in de loonkost van de werknemer via een herinschakelingsuitkering van de RVA of een financiële tussenkomst van het OCMW, kan de werkgever volgende verminderingen genieten voor de werknemer van </source>
           <target xml:lang="de" state="final"> Neben einem Anteil an den Lohnkosten des Arbeitnehmers über eine Wiedereingliederungsunterstützung des LfA oder einer finanziellen Beteiligung des ÖSHZ, kann der Arbeitgeber die folgenden Ermäßigungen für den Arbeitnehmer in Anspruch nehmen </target>
         </trans-unit>
@@ -291,7 +295,7 @@
             <target xml:lang="de" state="final">Kategorie 3° und 6°: G<g ctype="x-html-sub">1</g> im Quartal des Dienstantritts und den darauf folgenden Quartalen; </target>
           </trans-unit>
         </group>
-        <trans-unit restype="x-html-p" id="/html/body/p[10]">
+        <trans-unit restype="x-html-p" id="/html/body/p[11]">
           <source xml:lang="nl"> Indien een werkgever deze vermindering reeds heeft genoten voor een werknemer die hij opnieuw in dienst neemt binnen de 12 maanden na het einde van de vorige arbeidsovereenkomst, wordt de tewerkstelling geacht ononderbroken te zijn voor wat betreft het vaststellen van het recht op de vermindering G<g ctype="x-html-sub">1</g> en het aantal resterende kwartalen dat hij hierop nog recht heeft. De periode van onderbreking verlengt dus de periode waarin de voordelen kunnen worden toegekend, niet. </source>
           <target xml:lang="de" state="final"> Wenn ein Arbeitgeber diese Ermäßigung bereits für einen Arbeitnehmer beansprucht hat, den er innerhalb einer Periode von 12 Monaten nach dem Ende des vorigen Arbeitsvertrags neu einstellt, gilt die Beschäftigung als ununterbrochen für die Feststellung des Rechts auf die Ermäßigung G<g ctype="x-html-sub">1</g> und der Anzahl der restlichen Quartale, für die dieses Recht noch gilt. Die Periode der Unterbrechung verlängert deshalb nicht die Periode, während derer die Vorteile gewährt werden können. </target>
         </trans-unit>
@@ -299,15 +303,15 @@
           <source xml:lang="nl"> Te vervullen formaliteiten </source>
           <target xml:lang="de" state="final"> Zu erledigende Formalitäten </target>
         </trans-unit>
-        <trans-unit restype="x-html-p" id="/html/body/p[11]">
+        <trans-unit restype="x-html-p" id="/html/body/p[12]">
           <source xml:lang="nl"> De werkgever moet voorafgaandelijk een attest verkrijgen dat bewijst dat hij onder het toepassingsgebied van deze maatregel valt. Tot 31 december 2014 werd dit attest afgeleverd door de Directeur-generaal van de Algemene Directie Werkgelegenheid en Arbeidsmarkt van de FOD Werkgelegenheid, Arbeid en Sociaal Overleg (FOD WASO). Vanaf 1 januari 2015 worden deze attesten toegekend door het bevoegde Gewest. </source>
           <target xml:lang="de" state="final"> Hierzu müssen sie erst eine Bescheinigung erhalten, aus der hervorgeht, dass sie in den Anwendungsbereich von SINE fallen. Bis 31.12.2014 wurde Arbeitgebern, die dafür in Betracht kamen, eine Bescheinigung der Generaldirektor der Generaldirektion Beschäftigung und Arbeitsmarkt des FÖD Beschäftigung, Arbeit und Soziale Konzertierung (FÖD BASK) ausgestellt. Ab 01.01.2015 werden diese Bescheinigungen von der zuständigen Region erteilt. </target>
         </trans-unit>
-        <trans-unit restype="x-html-p" id="/html/body/p[12]">
+        <trans-unit restype="x-html-p" id="/html/body/p[13]">
           <source xml:lang="nl"> Om in aanmerking te komen voor de vermindering moet de werknemer (of de werkgever indien het gaat om een activering van de tussenkomst vanwege een OCMW) een herinschakelingsuitkering genieten in het kader van de sociale inschakelingseconomie. Bij zijn aanvraag voor een herinschakelingsuitkering voegt de werknemer, respectievelijk de werkgever, het hierboven vermelde attest. </source>
           <target xml:lang="de" state="final"> Um für die Ermäßigung in Betracht zu kommen, muss der Arbeitnehmer (oder der Arbeitgeber, wenn es die Aktivierung einer Leistung seitens eines ÖSHZ betrifft) eine Wiedereingliederungsunterstützung im Rahmen der Eingliederungssozialwirtschaft erhalten. Seinem Antrag auf eine Wiedereingliederungsunterstützung legt der Arbeitnehmer bzw. der Arbeitgeber das obige Attest bei. </target>
         </trans-unit>
-        <trans-unit restype="x-html-p" id="/html/body/p[13]">
+        <trans-unit restype="x-html-p" id="/html/body/p[14]">
           <source xml:lang="nl"> De RVA geeft aan de RSZ de gegevens van de werknemers door die recht geven op deze doelgroepvermindering. Het OCMW, dat een financiële tussenkomst verleent voor een gerechtigde op maatschappelijke integratie of een rechthebbende op financiële maatschappelijke hulp, tewerkgesteld in het kader van de sociale inschakelingseconomie, moet het gewestelijk RVA-bureau hiervan verwittigen met een typebrief van de POD Maatschappelijke Integratie. </source>
           <target xml:lang="de" state="final"> Das LfA leitet dem LSS die Daten der Arbeitnehmer zu, die das Recht auf diese Zielgruppenermäßigung eröffnen. Das ÖSHZ, das eine finanzielle Beteiligung für einen Berechtigten mit Anspruch auf Sozialhilfe oder einen Berechtigten mit Anspruch auf finanzielle Sozialhilfe gewährt, der im Rahmen der Sozialeingliederungswirtschaft eingestellt wird, muss das regionale LfA-Büro davon mittels eines Musterbriefs des ÖPD Sozialeingliederung in Kenntnis setzen. </target>
         </trans-unit>
