--- a/EMS/xliff/tests/Unit/Resources/Integrated/xliffs/29426657f4cd3f0c4c8e5b16f94cf71445ecc1f6_1014608.xlf
+++ b/EMS/xliff/tests/Unit/Resources/Integrated/xliffs/29426657f4cd3f0c4c8e5b16f94cf71445ecc1f6_1014608.xlf
@@ -12,12 +12,24 @@
       </trans-unit>
       <group id="[introduction]">
         <trans-unit restype="x-html-p" id="/html/body/p[1]">
+          <source xml:lang="nl"/>
+          <target xml:lang="de" state="final"/>
+        </trans-unit>
+        <trans-unit restype="x-html-p" id="/html/body/p[2]">
+          <source xml:lang="nl"/>
+          <target xml:lang="de" state="final"/>
+        </trans-unit>
+        <trans-unit restype="x-html-p" id="/html/body/p[3]">
           <source xml:lang="nl"> Vanaf 1 juli 2016 introduceert Vlaanderen een nieuwe doelgroepvermindering voor oudere werknemers <g ctype="x-html-strong">ter vervanging</g> van de bestaande doelgroepvermindering ouderen. Dit geldt enkel voor de werknemers die werkzaam zijn in of afhangen van een vestigingseenheid in Vlaanderen. Voor de werknemers tewerkgesteld in een andere regio wijzigt er niets. </source>
           <target xml:lang="de" state="final"> Ab 01.07.2016 führt Flandern eine neue Zielgruppenermäßigung für ältere Arbeitnehmer <g ctype="x-html-strong">als Ersatz</g> der bestehenden Zielgruppenermäßigung ältere Arbeitnehmer ein. Dies gilt nur für Arbeitnehmer, die in einer Niederlassungseinheit in Flandern tätig sind oder von ihr abhängig sind. Für Arbeitnehmer, die in einer anderen Region beschäftigt sind, ändert sich nichts. </target>
         </trans-unit>
-        <trans-unit restype="x-html-p" id="/html/body/p[2]">
+        <trans-unit restype="x-html-p" id="/html/body/p[4]">
           <source xml:lang="nl"> Het bedrag van de doelgroepvermindering hangt af van de leeftijd van de werknemer en of het gaat om een indienstname of een voortgezette tewerkstelling. </source>
           <target xml:lang="de" state="final"> Der Betrag der Zielgruppenermäßigung hängt vom Alter des Arbeitnehmers ab, sowie davon, ob es sich um eine Einstellung oder eine fortgesetzte Beschäftigung handelt. </target>
+        </trans-unit>
+        <trans-unit restype="x-html-p" id="/html/body/p[5]">
+          <source xml:lang="nl"/>
+          <target xml:lang="de" state="final"/>
         </trans-unit>
       </group>
       <group id="[description]">
@@ -88,11 +100,11 @@
             <group restype="x-html-ul" html:style="padding-top: 0px; padding-bottom: 0px;" id="/html/body/ul[2]/li[4]/ul">
               <trans-unit restype="listitem" id="/html/body/ul[2]/li[4]/ul/li[1]">
                 <source xml:lang="nl">In afwijking hiervan bedraagt de loongrens voor het 4<g ctype="x-html-sup">de</g> kwartaal telkens 18.545,00 EUR </source>
-                <target xml:lang="de" state="final">Abweichend hiervon beträgt die Lohngrenze für das 4. Quartal jeweils 18.545,00 EUR </target>
+                <target xml:lang="de" state="final">Abweichend hiervon beträgt die Lohngrenze für das 4.<g ctype="x-html-sup"/> Quartal jeweils 18.545,00 EUR </target>
               </trans-unit>
               <trans-unit restype="listitem" id="/html/body/ul[2]/li[4]/ul/li[2]">
                 <source xml:lang="nl">behalve voor de interimsector waar deze verhoogde loongrens geldt voor het 1<g ctype="x-html-sup">ste</g> kwartaal van het jaar (met ingang van het 1<g ctype="x-html-sup">ste</g> kwartaal 2020). </source>
-                <target xml:lang="de" state="final">ausgenommen des Interimssektors, für den diese erhöhte Lohngrenze für das 1. Quartal des Jahres gilt (ab dem 1. Quartal 2020). </target>
+                <target xml:lang="de" state="final">ausgenommen des Interimssektors, für den diese erhöhte Lohngrenze für das 1.<g ctype="x-html-sup"/> Quartal des Jahres gilt (ab dem 1.<g ctype="x-html-sup"/> Quartal 2020). </target>
               </trans-unit>
             </group>
           </group>
@@ -122,11 +134,11 @@
             <group restype="x-html-ul" html:style="padding-top: 0px; padding-bottom: 0px;" id="/html/body/ul[3]/li[4]/ul">
               <trans-unit restype="listitem" id="/html/body/ul[3]/li[4]/ul/li[1]">
                 <source xml:lang="nl">In afwijking hiervan bedraagt de loongrens voor het 4<g ctype="x-html-sup">de</g> kwartaal telkens 18.545,00 EUR </source>
-                <target xml:lang="de" state="final">Abweichend hiervon beträgt die Lohngrenze für das 4. Quartal jeweils 18.545,00 EUR </target>
+                <target xml:lang="de" state="final">Abweichend hiervon beträgt die Lohngrenze für das 4.<g ctype="x-html-sup"/> Quartal jeweils 18.545,00 EUR </target>
               </trans-unit>
               <trans-unit restype="listitem" id="/html/body/ul[3]/li[4]/ul/li[2]">
                 <source xml:lang="nl">behalve voor de interimsector waar deze verhoogde loongrens geldt voor het 1<g ctype="x-html-sup">ste</g> kwartaal van het jaar (met ingang van het 1<g ctype="x-html-sup">ste</g> kwartaal 2020). </source>
-                <target xml:lang="de" state="final">ausgenommen des Interimssektors, für den diese erhöhte Lohngrenze für das 1. Quartal des Jahres gilt (ab dem 1. Quartal 2020). </target>
+                <target xml:lang="de" state="final">ausgenommen des Interimssektors, für den diese erhöhte Lohngrenze für das 1.<g ctype="x-html-sup"/> Quartal des Jahres gilt (ab dem 1.<g ctype="x-html-sup"/> Quartal 2020). </target>
               </trans-unit>
             </group>
           </group>
@@ -169,6 +181,10 @@
           <source xml:lang="nl"> De werkgever duidt in het DmfA-blok 'tewerkstelling inlichtingen' in de zone '<g ctype="x-html-a" html:href="%{BASE_URL_CURRENT}%/instructions/fill_in_dmfa/dmfa_fillinrules/nssoinformation/prestationexemption.html">vrijstelling prestaties</g>' aan wat de situatie van de werknemer is. </source>
           <target xml:lang="de" state="final"> Der Arbeitgeber meldet im DmfA-Block ‚Beschäftigung Auskünfte‘ im Feld ‚<g ctype="x-html-a" html:href="%{BASE_URL_CURRENT}%/instructions/fill_in_dmfa/dmfa_fillinrules/nssoinformation/prestationexemption.html">Freistellung von Leistungen</g>‘ die Situation des Arbeitnehmers. </target>
         </trans-unit>
+        <trans-unit restype="x-html-ul" id="/html/body/ul[5]">
+          <source xml:lang="nl"/>
+          <target xml:lang="de" state="final"/>
+        </trans-unit>
         <trans-unit restype="x-html-h2" html:id="h22" id="/html/body/h2[3]">
           <source xml:lang="nl"> Bedrag van de vermindering (vanaf 1 januari 2020) </source>
           <target xml:lang="de" state="final"> Betrag der Ermäßigung (ab dem 01. Januar 2020) </target>
@@ -177,16 +193,16 @@
           <source xml:lang="nl"> Oudere niet-werkende werkzoekenden </source>
           <target xml:lang="de" state="final"> Nicht erwerbstätige ältere Arbeitssuchende </target>
         </trans-unit>
-        <group restype="x-html-ul" id="/html/body/ul[5]">
-          <trans-unit restype="listitem" id="/html/body/ul[5]/li[1]">
+        <group restype="x-html-ul" id="/html/body/ul[6]">
+          <trans-unit restype="listitem" id="/html/body/ul[6]/li[1]">
             <source xml:lang="nl">De oudere werknemer die bij zijn indienstneming op de laatste dag van het kwartaal minstens 58 jaar is en jonger dan de wettelijke pensioenleeftijd, opent het recht op een doelgroepvermindering <g ctype="x-html-strong">G<g ctype="x-html-sub">7</g></g> het kwartaal van indienstname en de 7 daarop volgende kwartalen. </source>
             <target xml:lang="de" state="final">Der ältere Arbeitnehmer, der am letzten Tag des Quartals der Einstellung wenigstens 58 Jahre ist und das gesetzliche Pensionsalter noch nicht erreicht hat, eröffnet das Recht auf eine Zielgruppenermäßigung <g ctype="x-html-strong">G<g ctype="x-html-sub">7</g></g> für das Quartal der Einstellung und die 7 darauffolgenden Quartale. </target>
           </trans-unit>
-          <trans-unit restype="listitem" id="/html/body/ul[5]/li[2]">
+          <trans-unit restype="listitem" id="/html/body/ul[6]/li[2]">
             <source xml:lang="nl">De VDAB stuurt de gegevens elektronisch door naar de RSZ. </source>
             <target xml:lang="de" state="final">Der VDAB übermittelt dem LSS die Angaben auf elektronischem Weg. </target>
           </trans-unit>
-          <trans-unit restype="listitem" id="/html/body/ul[5]/li[3]">
+          <trans-unit restype="listitem" id="/html/body/ul[6]/li[3]">
             <source xml:lang="nl">Bij een hertewerkstelling binnen de 4 kwartalen na de beëindiging van een vorige tewerkstelling wordt de oorspronkelijke tewerkstelling en de hertewerkstelling beschouwd als één tewerkstelling waarbij de telling van het aantal kwartalen doorloopt. </source>
             <target xml:lang="de" state="final">Bei einer Wiederbeschäftigung innerhalb von 4 Quartalen nach der Beendigung einer vorherigen Beschäftigung werden die ursprüngliche Beschäftigung und die Wiederbeschäftigung als 1 Beschäftigung betrachtet, wobei die Anzahl der Quartale weiter gerechnet wird. </target>
           </trans-unit>
@@ -195,12 +211,12 @@
           <source xml:lang="nl"> Oudere zittende werknemers </source>
           <target xml:lang="de" state="final"> In Beschäftigung stehende ältere Arbeitnehmer </target>
         </trans-unit>
-        <group restype="x-html-ul" id="/html/body/ul[6]">
-          <trans-unit restype="listitem" id="/html/body/ul[6]/li[1]">
+        <group restype="x-html-ul" id="/html/body/ul[7]">
+          <trans-unit restype="listitem" id="/html/body/ul[7]/li[1]">
             <source xml:lang="nl">De oudere werknemer van minstens 58 jaar en jonger dan 60 jaar (op de laatste dag van het kwartaal) opent het recht op een doelgroepvermindering <g ctype="x-html-strong">G<g ctype="x-html-sub">4</g></g> (600,00 EUR). </source>
             <target xml:lang="de" state="final">Der mindestens 58, aber weniger als 60 Jahre alte Arbeitnehmer (am letzten Tag des Quartals) eröffnet das Recht auf eine Zielgruppenermäßigung <g ctype="x-html-strong">G<g ctype="x-html-sub">4</g></g> (600,00 EUR). </target>
           </trans-unit>
-          <trans-unit restype="listitem" id="/html/body/ul[6]/li[2]">
+          <trans-unit restype="listitem" id="/html/body/ul[7]/li[2]">
             <source xml:lang="nl">De oudere werknemer van minstens 60 jaar (op de laatste dag van het kwartaal) opent het recht op een doelgroepvermindering <g ctype="x-html-strong">G<g ctype="x-html-sub">8</g></g> (1.500,00 EUR). </source>
             <target xml:lang="de" state="final">Der mindestens 60 Jahre alte Arbeitnehmer (am letzten Tag des Quartals) eröffnet das Recht auf eine Zielgruppenermäßigung <g ctype="x-html-strong">G<g ctype="x-html-sub">8</g></g> (1.500,00 EUR). </target>
           </trans-unit>
@@ -213,24 +229,24 @@
           <source xml:lang="nl"> Voor de oudere niet-werkende werkzoekenden </source>
           <target xml:lang="de" state="final"> Für nicht erwerbstätige ältere Arbeitssuchende </target>
         </trans-unit>
-        <group restype="x-html-ul" id="/html/body/ul[7]">
-          <trans-unit restype="listitem" id="/html/body/ul[7]/li[1]">
+        <group restype="x-html-ul" id="/html/body/ul[8]">
+          <trans-unit restype="listitem" id="/html/body/ul[8]/li[1]">
             <source xml:lang="nl">De oudere werknemer die vóór 1 januari 2020 in dienst is getreden bij de werkgever, minstens 55 jaar is op 31 december 2019 en jonger dan 58 jaar, opent het recht op een doelgroepvermindering <g ctype="x-html-strong">G<g ctype="x-html-sub">7</g></g> (saldo) het kwartaal van indienstname en de 7 daarop volgende kwartalen. </source>
             <target xml:lang="de" state="final">Der ältere Arbeitnehmer, der vor dem 01. Januar 2020 beim Arbeitgeber in Dienst getreten und am 31. Dezember 2019 wenigstens 55 Jahre und jünger als 58 Jahre ist, eröffnet das Recht auf eine Zielgruppenermäßigung <g ctype="x-html-strong">G<g ctype="x-html-sub">7</g></g> (Saldo) für das Quartal der Einstellung und die 7 darauffolgenden Quartale. </target>
           </trans-unit>
-          <trans-unit restype="listitem" id="/html/body/ul[7]/li[2]">
+          <trans-unit restype="listitem" id="/html/body/ul[8]/li[2]">
             <source xml:lang="nl">Oudere niet-werkende werkzoekenden waarvoor het aantal kwartalen verhoogde vermindering uitgeput is, komen in aanmerking voor de doelgroepvermindering voor oudere zittende werknemers, ook voor de overgangsperiode. </source>
             <target xml:lang="de" state="final">Ältere, nicht arbeitende Arbeitssuchende, für die die Zahl der Quartale mit erhöhter Ermäßigung ausgeschöpft ist, kommen auch in der Übergangsperiode für eine Zielgruppenermäßigung für ältere arbeitende Arbeitnehmer in Betracht. </target>
           </trans-unit>
-          <trans-unit restype="listitem" id="/html/body/ul[7]/li[3]">
+          <trans-unit restype="listitem" id="/html/body/ul[8]/li[3]">
             <source xml:lang="nl">Het forfait G<g ctype="x-html-sub">7</g> geldt vanaf het 1<g ctype="x-html-sup">ste</g> kwartaal 2019 voor nieuwe indiensttredingen en voor de resterende kwartalen van degene die het recht reeds geopend hadden. </source>
-            <target xml:lang="de" state="final">Die Pauschale G<g ctype="x-html-sub">7</g> gilt ab dem 1. Quartal 2019 für Neueinstellungen und für die übrigen Quartale derjenigen, die das Recht bereits eröffnet hatten. </target>
+            <target xml:lang="de" state="final">Die Pauschale G<g ctype="x-html-sub">7</g> gilt ab dem 1.<g ctype="x-html-sup"/> Quartal 2019 für Neueinstellungen und für die übrigen Quartale derjenigen, die das Recht bereits eröffnet hatten. </target>
           </trans-unit>
-          <trans-unit restype="listitem" id="/html/body/ul[7]/li[4]">
+          <trans-unit restype="listitem" id="/html/body/ul[8]/li[4]">
             <source xml:lang="nl">De VDAB stuurt de gegevens elektronisch door naar de RSZ. </source>
             <target xml:lang="de" state="final">Der VDAB übermittelt dem LSS die Angaben auf elektronischem Weg. </target>
           </trans-unit>
-          <trans-unit restype="listitem" id="/html/body/ul[7]/li[5]">
+          <trans-unit restype="listitem" id="/html/body/ul[8]/li[5]">
             <source xml:lang="nl">Bij een hertewerkstelling binnen de 4 kwartalen na de beëindiging van een vorige tewerkstelling wordt de oorspronkelijke tewerkstelling en de hertewerkstelling beschouwd als één tewerkstelling waarbij de telling van het aantal kwartalen doorloopt. </source>
             <target xml:lang="de" state="final">Bei einer Wiederbeschäftigung innerhalb von 4 Quartalen nach der Beendigung einer vorherigen Beschäftigung werden die ursprüngliche Beschäftigung und die Wiederbeschäftigung als 1 Beschäftigung betrachtet, wobei die Anzahl der Quartale weiter gerechnet wird. </target>
           </trans-unit>
@@ -239,8 +255,8 @@
           <source xml:lang="nl"> Voor oudere zittende werknemers </source>
           <target xml:lang="de" state="final"> Für in Beschäftigung stehende ältere Arbeitnehmer </target>
         </trans-unit>
-        <group restype="x-html-ul" id="/html/body/ul[8]">
-          <trans-unit restype="listitem" id="/html/body/ul[8]/li">
+        <group restype="x-html-ul" id="/html/body/ul[9]">
+          <trans-unit restype="listitem" id="/html/body/ul[9]/li">
             <source xml:lang="nl">De oudere werknemer die op 31 december 2019 minstens 55 jaar was en jonger dan 58 jaar opent verder het recht op de doelgroepvermindering <g ctype="x-html-strong">G<g ctype="x-html-sub">4</g></g> (600,00 EUR). </source>
             <target xml:lang="de" state="final">Der am 31. Dezember 2019 mindestens 55, aber weniger als 58 Jahre alte Arbeitnehmer eröffnet das Recht auf eine Zielgruppenermäßigung <g ctype="x-html-strong">G<g ctype="x-html-sub">4</g></g> (600,00 EUR). </target>
           </trans-unit>
