--- a/EMS/xliff/tests/Unit/Resources/Integrated/xliffs/35188e8890794999e4904425b2d33375980b54f1_1017930.xlf
+++ b/EMS/xliff/tests/Unit/Resources/Integrated/xliffs/35188e8890794999e4904425b2d33375980b54f1_1017930.xlf
@@ -12,10 +12,14 @@
       </trans-unit>
       <group id="[introduction]">
         <trans-unit restype="x-html-p" id="/html/body/p[1]">
+          <source xml:lang="nl"/>
+          <target xml:lang="de" state="final"/>
+        </trans-unit>
+        <trans-unit restype="x-html-p" id="/html/body/p[2]">
           <source xml:lang="nl"> Vanaf 1 oktober 2016 introduceert Brussel een nieuwe doelgroepvermindering voor oudere werknemers <g ctype="x-html-strong">ter vervanging</g> van de bestaande doelgroepvermindering ouderen. Dit geldt enkel voor de werknemers die werkzaam zijn in of afhangen van een vestigingseenheid in <g ctype="x-html-strong">Brussel</g>. Voor de werknemers tewerkgesteld in een andere regio wijzigt er niets. </source>
           <target xml:lang="de" state="final"> Ab <g ctype="x-html-strong">01.10.2016</g> führt Brüssel eine neue Zielgruppenermäßigung für ältere Arbeitnehmer als Ersatz der bestehenden Zielgruppenermäßigung ältere Arbeitnehmer ein. Dies gilt nur für Arbeitnehmer, die in einer Niederlassungseinheit in <g ctype="x-html-strong">Brüssel</g> tätig sind oder von ihr abhängig sind. Für Arbeitnehmer, die in einer anderen Region beschäftigt sind, ändert sich nichts. </target>
         </trans-unit>
-        <trans-unit restype="x-html-p" id="/html/body/p[2]">
+        <trans-unit restype="x-html-p" id="/html/body/p[3]">
           <source xml:lang="nl"> Het bedrag van de doelgroepvermindering hangt af van de leeftijd van de werknemer. </source>
           <target xml:lang="de" state="final"> Der Betrag der Zielgruppenermäßigung hängt vom Alter des Arbeitnehmers ab. </target>
         </trans-unit>
@@ -76,7 +80,7 @@
             <group restype="x-html-ul" html:style="padding-top: 0px; padding-bottom: 0px;" id="/html/body/ul[2]/li[2]/ul">
               <trans-unit restype="listitem" id="/html/body/ul[2]/li[2]/ul/li">
                 <source xml:lang="nl">vanaf het <g ctype="x-html-span" html:class="newWord">4<g ctype="x-html-sup">de</g> kwartaal 2021</g> is het plafond gelijk aan <g ctype="x-html-span" html:class="newWord">11.142,68 EUR</g> . </source>
-                <target xml:lang="de" state="final">ab dem <g ctype="x-html-span" html:class="newWord">4. Quartal 2021</g> entspricht die Grenze <g ctype="x-html-span" html:class="newWord">11.142,68 EUR</g>. </target>
+                <target xml:lang="de" state="final">ab dem <g ctype="x-html-span" html:class="newWord">4.<g ctype="x-html-sup"/> Quartal 2021</g> entspricht die Grenze <g ctype="x-html-span" html:class="newWord">11.142,68 EUR</g>. </target>
               </trans-unit>
             </group>
           </group>
@@ -85,8 +89,12 @@
           <source xml:lang="nl"> Bedrag van de vermindering </source>
           <target xml:lang="de" state="final"> Betrag der Ermäßigung </target>
         </trans-unit>
-        <group restype="x-html-ul" id="/html/body/ul[3]">
-          <trans-unit restype="listitem" id="/html/body/ul[3]/li">
+        <trans-unit restype="x-html-ul" id="/html/body/ul[3]">
+          <source xml:lang="nl"/>
+          <target xml:lang="de" state="final"/>
+        </trans-unit>
+        <group restype="x-html-ul" id="/html/body/ul[4]">
+          <trans-unit restype="listitem" id="/html/body/ul[4]/li">
             <source xml:lang="nl">De oudere werknemer van minstens 57 jaar en jonger dan 65 jaar (op de laatste dag van het kwartaal) opent het recht op een doelgroepvermindering <g ctype="x-html-strong">G<g ctype="x-html-sub">1</g></g> (1.000,00 EUR). </source>
             <target xml:lang="de" state="final">Der mindestens 57, aber unter 65 Jahre alte Arbeitnehmer (am letzten Tag des Quartals) eröffnet das Recht auf eine Zielgruppenermäßigung <g ctype="x-html-strong">G<g ctype="x-html-sub">1</g></g> (1.000,00 EUR). </target>
           </trans-unit>
