--- a/EMS/xliff/tests/Unit/Resources/Integrated/xliffs/355e70520ca2610377df248e62d31ed6f7df83c3_1016254.xlf
+++ b/EMS/xliff/tests/Unit/Resources/Integrated/xliffs/355e70520ca2610377df248e62d31ed6f7df83c3_1016254.xlf
@@ -29,6 +29,10 @@
             <target xml:lang="de" state="final">Zielgruppenermäßigung für junge Arbeitnehmer – Lehrlinge alternierende Ausbildung und junge Arbeitnehmer in beruflicher Bildung in Teilzeit mit einem Teilzeitarbeitsvertrag. </target>
           </trans-unit>
         </group>
+        <trans-unit restype="x-html-p" id="/html/body/p[3]">
+          <source xml:lang="nl"/>
+          <target xml:lang="de" state="final"/>
+        </trans-unit>
       </group>
       <group id="[description]">
         <trans-unit restype="x-html-h2" html:id="h20" id="/html/body/h2[1]">
@@ -88,11 +92,11 @@
           </trans-unit>
           <trans-unit restype="listitem" id="/html/body/ul[2]/li[3]">
             <source xml:lang="nl"> <g ctype="x-html-strong">Laaggeschoolde jongeren</g> mogen geen diploma of getuigschrift secundair onderwijs, 2<g ctype="x-html-sup">de</g> leerjaar 3<g ctype="x-html-sup">de</g> graad, of gelijkwaardig hebben. Een vollediger <g ctype="x-html-a" html:href="https://www.werk.be/faq-categorie/doelgroepverminderingen">overzicht </g> bevindt zich op de website van WSE Vlaanderen. De VDAB attesteert en bepaalt wie in aanmerking komt. Via een elektronische flux geeft de VDAB het studieniveau door aan de RSZ. </source>
-            <target xml:lang="de" state="final"> <g ctype="x-html-strong">Gering qualifizierte Jugendliche</g> dürfen kein Diplom oder Zeugnis des Sekundarunterrichts, 2. Lehrjahr 3. Stufe oder eine gleichwertige Ausbildung besitzen. Ein vollständiger <g ctype="x-html-a" html:href="https://www.werk.be/faq-categorie/doelgroepverminderingen">Überblick</g> befindet sich auf der Website der Flämischen Subventionsstelle für Beschäftigung und Sozialwirtschaft. Der VDAB bescheinigt und stellt fest, wer in Betracht kommt. Der VDAB übermittelt dem LSS den Bildungsabschluss auf elektronischem Weg. </target>
+            <target xml:lang="de" state="final"> <g ctype="x-html-strong">Gering qualifizierte Jugendliche</g> dürfen kein Diplom oder Zeugnis des Sekundarunterrichts, 2. Lehrjahr 3. Stufe oder eine gleichwertige Ausbildung besitzen. <g ctype="x-html-sup"/><g ctype="x-html-sup"/> Ein vollständiger <g ctype="x-html-a" html:href="https://www.werk.be/faq-categorie/doelgroepverminderingen">Überblick</g> befindet sich auf der Website der Flämischen Subventionsstelle für Beschäftigung und Sozialwirtschaft. Der VDAB bescheinigt und stellt fest, wer in Betracht kommt. Der VDAB übermittelt dem LSS den Bildungsabschluss auf elektronischem Weg. </target>
           </trans-unit>
           <trans-unit restype="listitem" id="/html/body/ul[2]/li[4]">
             <source xml:lang="nl"> <g ctype="x-html-strong">Middengeschoolde jongeren</g> (uiterlijk op 31 december 2019 bij de werkgever in dienst getreden) mogen hoogstens een diploma of getuigschrift secundair onderwijs, 2<g ctype="x-html-sup">de</g> leerjaar 3<g ctype="x-html-sup">de</g> graad, of gelijkwaardig hebben. Wanneer voorzien is dat de jongere binnen de 4 maanden te rekenen vanaf de dag van zijn indiensttreding een diploma Hoger Onderwijs behaalt, komt hij niet in aanmerking. De VDAB attesteert en bepaalt wie in aanmerking komt. Via een elektronische flux geeft de VDAB het studieniveau door aan de RSZ.  </source>
-            <target xml:lang="de" state="final"> <g ctype="x-html-strong">Jugendliche mit mittlerer Qualifikation</g> (die spätestens am 31. Dezember 2019 beim Arbeitgeber in Dienst getreten sind) dürfen höchstens ein Diplom oder Zeugnis des Sekundarunterrichts, 2. Lehrjahr 3. Stufe oder eine gleichwertige Ausbildung besitzen. Wenn vorgesehen ist, dass ein Jugendlicher innerhalb von vier Monaten ab dem Tag seines Beschäftigungsbeginns ein Hochschulzeugnis erwirbt, kommt er nicht in Betracht. Der VDAB bescheinigt und stellt fest, wer in Betracht kommt. Der VDAB übermittelt dem LSS den Bildungsabschluss auf elektronischem Weg.  </target>
+            <target xml:lang="de" state="final"> <g ctype="x-html-strong">Jugendliche mit mittlerer Qualifikation</g> (die spätestens am 31. Dezember 2019 beim Arbeitgeber in Dienst getreten sind) dürfen höchstens ein Diplom oder Zeugnis des Sekundarunterrichts, 2.<g ctype="x-html-sup"/> Lehrjahr 3.<g ctype="x-html-sup"/> Stufe oder eine gleichwertige Ausbildung besitzen. Wenn vorgesehen ist, dass ein Jugendlicher innerhalb von vier Monaten ab dem Tag seines Beschäftigungsbeginns ein Hochschulzeugnis erwirbt, kommt er nicht in Betracht. Der VDAB bescheinigt und stellt fest, wer in Betracht kommt. Der VDAB übermittelt dem LSS den Bildungsabschluss auf elektronischem Weg.  </target>
           </trans-unit>
           <trans-unit restype="listitem" id="/html/body/ul[2]/li[5]">
             <source xml:lang="nl">Om in aanmerking te komen moet de jongere beschikken over een elektronisch dossier (<g ctype="x-html-a" html:class="external" html:href="https://www.vdab.be/mijnloopbaan" html:target="_blank"><g ctype="x-html-strong">portfolio</g></g>) bij de VDAB op de laatste dag van het kwartaal van indienstname; indien de jongere hierover niet beschikt voor het kwartaal van indienstname en de daarop volgende kwartalen, wordt het overeenkomstig aantal kwartalen in mindering gebracht (flux VDAB). </source>
@@ -121,20 +125,24 @@
             <target xml:lang="de" state="final">Quartale, in denen diese Ermäßigung in Anspruch genommen werden kann, werden bei der Ermäßigungsperiode für Jugendliche mit geringer und mittlerer Qualifikation nicht mitgerechnet. </target>
           </trans-unit>
         </group>
+        <trans-unit restype="x-html-ul" id="/html/body/ul[4]">
+          <source xml:lang="nl"/>
+          <target xml:lang="de" state="final"/>
+        </trans-unit>
         <trans-unit restype="x-html-h3" id="/html/body/h3[4]">
           <source xml:lang="nl"> Doelgroepvermindering laaggeschoold </source>
           <target xml:lang="de" state="final"> Zielgruppenermäßigung gering qualifizierte Jugendliche </target>
         </trans-unit>
-        <group restype="x-html-ul" id="/html/body/ul[4]">
-          <trans-unit restype="listitem" id="/html/body/ul[4]/li[1]">
+        <group restype="x-html-ul" id="/html/body/ul[5]">
+          <trans-unit restype="listitem" id="/html/body/ul[5]/li[1]">
             <source xml:lang="nl">De laaggeschoolde jongere opent een vermindering <g ctype="x-html-strong">G<g ctype="x-html-sub">7</g></g> (saldo) voor het kwartaal van indienstname en de 7 daarop volgende kwartalen. Het forfait <g ctype="x-html-strong">G<g ctype="x-html-sub">7</g></g> geldt vanaf het 1<g ctype="x-html-sup">ste</g> kwartaal 2019 voor nieuwe indiensttredingen en voor de resterende kwartalen van degenen die het recht reeds geopend hadden. </source>
-            <target xml:lang="de" state="final">Gering qualifizierte Jugendliche eröffnet das Recht auf eine Ermäßigung <g ctype="x-html-strong">G<g ctype="x-html-sub">7</g></g> (Saldo) für das Quartal der Einstellung und die 7 darauffolgenden Quartale. Die Pauschale <g ctype="x-html-strong">G<g ctype="x-html-sub">7</g></g> gilt ab dem 1. Quartal 2019 für Neueinstellungen und für die übrigen Quartale derjenigen, die das Recht bereits geöffnet hatten. </target>
+            <target xml:lang="de" state="final">Gering qualifizierte Jugendliche eröffnet das Recht auf eine Ermäßigung <g ctype="x-html-strong">G<g ctype="x-html-sub">7</g></g> (Saldo) für das Quartal der Einstellung und die 7 darauffolgenden Quartale. Die Pauschale <g ctype="x-html-strong">G<g ctype="x-html-sub">7</g></g> gilt ab dem 1. Quartal 2019 für Neueinstellungen und für die übrigen Quartale derjenigen, die das Recht bereits geöffnet hatten.<g ctype="x-html-sup"/> </target>
           </trans-unit>
-          <trans-unit restype="listitem" id="/html/body/ul[4]/li[2]">
+          <trans-unit restype="listitem" id="/html/body/ul[5]/li[2]">
             <source xml:lang="nl">Bij een hertewerkstelling binnen de 4 kwartalen na de beëindiging van een vorige tewerkstelling wordt de oorspronkelijke tewerkstelling en de hertewerkstelling beschouwd als één tewerkstelling waarbij de telling van het aantal kwartalen doorloopt. </source>
             <target xml:lang="de" state="final">Bei einer Wiederbeschäftigung innerhalb von 4 Quartalen nach der Beendigung einer vorherigen Beschäftigung werden die ursprüngliche Beschäftigung und die Wiederbeschäftigung als 1 Beschäftigung betrachtet, wobei die Anzahl der Quartale weiter gerechnet wird. </target>
           </trans-unit>
-          <trans-unit restype="listitem" id="/html/body/ul[4]/li[3]">
+          <trans-unit restype="listitem" id="/html/body/ul[5]/li[3]">
             <source xml:lang="nl">De aansluitende tewerkstelling bij dezelfde werkgever na een tewerkstelling 1bis alternerend leren of alternerende opleiding (met een deeltijdse arbeidsovereenkomst), wordt beschouwd als een nieuwe indienstname. </source>
             <target xml:lang="de" state="final">Die anschließende Beschäftigung beim gleichen Arbeitgeber nach einer Beschäftigung 1bis duale oder alternierende Ausbildung (mit einem Teilzeitarbeitsvertrag) wird ebenfalls als Neueinstellung betrachtet. </target>
           </trans-unit>
@@ -143,20 +151,24 @@
           <source xml:lang="nl">   </source>
           <target xml:lang="de" state="final">   </target>
         </trans-unit>
+        <trans-unit restype="x-html-ul" id="/html/body/ul[6]">
+          <source xml:lang="nl"/>
+          <target xml:lang="de" state="final"/>
+        </trans-unit>
         <trans-unit restype="x-html-h3" id="/html/body/h3[5]">
           <source xml:lang="nl"> Overgangsmaatregel voor middengeschoolde jongeren </source>
           <target xml:lang="de" state="final"> Übergangsmaßnahme für Jugendliche mit mittlerer Qualifikation </target>
         </trans-unit>
-        <group restype="x-html-ul" id="/html/body/ul[5]">
-          <trans-unit restype="listitem" id="/html/body/ul[5]/li[1]">
+        <group restype="x-html-ul" id="/html/body/ul[7]">
+          <trans-unit restype="listitem" id="/html/body/ul[7]/li[1]">
             <source xml:lang="nl">De middengeschoolde jongere, die uiterlijk op 31 december 2019 bij de werkgever in dienst is getreden, opent verder een vermindering <g ctype="x-html-strong">G<g ctype="x-html-sub">1</g></g> (1.000,00 EUR) voor het kwartaal van indienstname en de 7 daarop volgende kwartalen. </source>
             <target xml:lang="de" state="final">Jugendliche mit mittlerer Qualifikation, die spätestens am 31. Dezember 2019 beim Arbeitgeber in Dienst getreten sind, eröffnen ferner das Recht auf eine Ermäßigung <g ctype="x-html-strong">G<g ctype="x-html-sub">1</g></g> (1.000,00 EUR) für das Quartal der Einstellung und die 7 darauffolgenden Quartale. </target>
           </trans-unit>
-          <trans-unit restype="listitem" id="/html/body/ul[5]/li[2]">
+          <trans-unit restype="listitem" id="/html/body/ul[7]/li[2]">
             <source xml:lang="nl">Bij een hertewerkstelling binnen de 4 kwartalen na de beëindiging van een vorige tewerkstelling wordt de oorspronkelijke tewerkstelling en de hertewerkstelling beschouwd als één tewerkstelling waarbij de telling van het aantal kwartalen doorloopt. </source>
             <target xml:lang="de" state="final">Bei einer Wiederbeschäftigung innerhalb von 4 Quartalen nach der Beendigung einer vorherigen Beschäftigung werden die ursprüngliche Beschäftigung und die Wiederbeschäftigung als 1 Beschäftigung betrachtet, wobei die Anzahl der Quartale weiter gerechnet wird. </target>
           </trans-unit>
-          <trans-unit restype="listitem" id="/html/body/ul[5]/li[3]">
+          <trans-unit restype="listitem" id="/html/body/ul[7]/li[3]">
             <source xml:lang="nl">De aansluitende tewerkstelling bij dezelfde werkgever na een tewerkstelling 1bis alternerend leren of alternerende opleiding (met een deeltijdse arbeidsovereenkomst) wordt, zoals bij de introductie van de 'doelgroepvermindering jongeren Vlaanderen', ook beschouwd als een nieuwe indienstname, niet als een hertewerkstelling. Als deze nieuwe tewerkstelling zich situeert na 31 december 2019, komt zij niet in aanmerking voor de overgangsbepaling 'doelgroepvermindering middengeschoolde jongere'. </source>
             <target xml:lang="de" state="final">Die anschließende Beschäftigung beim gleichen Arbeitgeber nach einer Beschäftigung 1bis duale oder alternierende Ausbildung (mit einem Teilzeitarbeitsvertrag) wird wie bei der Einführung der ‚Zielgruppenermäßigung für Jugendliche in Flandern‘ ebenfalls als Neueinstellung betrachtet und nicht als Wiedereinstellung. Wenn diese Neueinstellung nach dem 31. Dezember 2019 liegt, kommt sie nicht für die Übergangsmaßnahme ‚Zielgruppenermäßigung für Jugendliche mit mittlerer Qualifikation‘. </target>
           </trans-unit>
@@ -165,24 +177,24 @@
           <source xml:lang="nl"> Te vervullen formaliteiten </source>
           <target xml:lang="de" state="final"> Zu erledigende Formalitäten </target>
         </trans-unit>
-        <group restype="x-html-ul" id="/html/body/ul[6]">
-          <trans-unit restype="listitem" id="/html/body/ul[6]/li[1]">
+        <group restype="x-html-ul" id="/html/body/ul[8]">
+          <trans-unit restype="listitem" id="/html/body/ul[8]/li[1]">
             <source xml:lang="nl">De laag- en middengeschoolde jongere, evenals de DBSO-jongere, moet een elektronisch dossier (<g ctype="x-html-a" html:class="external" html:href="https://www.vdab.be/mijnloopbaan" html:target="_blank"><g ctype="x-html-strong">portfolio</g></g>) bij de VDAB samenstellen. </source>
             <target xml:lang="de" state="final">Der Jugendliche mit geringer und mittlerer Qualifikation sowie der junge Arbeitnehmer in beruflicher Bildung in Teilzeit muss beim VDAB eine elektronische Akte (<g ctype="x-html-a" html:class="external" html:href="https://www.vdab.be/mijnloopbaan" html:target="_blank"><g ctype="x-html-strong">Portfolio</g></g>) erstellen. </target>
           </trans-unit>
-          <trans-unit restype="listitem" id="/html/body/ul[6]/li[2]">
+          <trans-unit restype="listitem" id="/html/body/ul[8]/li[2]">
             <source xml:lang="nl">Het aanmaken van een elektronisch dossier bij de VDAB is verplicht ongeacht de domicilie van de jongere. </source>
             <target xml:lang="de" state="final">Das Erstellen der elektronischen Akte beim VDAB ist unabhängig vom Wohnsitz des Jugendlichen obligatorisch. </target>
           </trans-unit>
-          <trans-unit restype="listitem" id="/html/body/ul[6]/li[3]">
+          <trans-unit restype="listitem" id="/html/body/ul[8]/li[3]">
             <source xml:lang="nl">De jongerenverplichting blijft federaal, dus de gegevens moeten verder in de Dmfa ingevuld worden (zoals 'gehandicapt' of van 'buitenlandse afkomst' zoals gedefinieerd in de desbetreffende wet van 24 december 1999 ter bevordering van de werkgelegenheid, art. 23).  </source>
             <target xml:lang="de" state="final">Die Jungarbeitnehmerverpflichtung bleibt auf föderaler Ebene bestehen, die Angaben müssen daher weiterhin in die DmfA eingetragen werden (wie z. B. ‚behindert‘ oder ,ausländischer Herkunft‘, wie dies festgelegt ist im diesbezüglichen Gesetz vom 24.12.1999 zur Förderung der Beschäftigung, Art. 23).  </target>
           </trans-unit>
-          <trans-unit restype="listitem" id="/html/body/ul[6]/li[4]">
+          <trans-unit restype="listitem" id="/html/body/ul[8]/li[4]">
             <source xml:lang="nl">Het voldoen aan de jongerenverplichting is geen vereiste meer voor de Vlaamse doelgroepvermindering, maar kan wel leiden tot een eventuele sanctionering FOD WASO. </source>
             <target xml:lang="de" state="final">Die Erfüllung der Jungarbeitnehmerverpflichtung ist keine Voraussetzung mehr für die flämische Zielgruppenermäßigung, kann aber Gegenstand einer eventuellen Sanktion durch den FÖD BASK sein. </target>
           </trans-unit>
-          <trans-unit restype="listitem" id="/html/body/ul[6]/li[5]">
+          <trans-unit restype="listitem" id="/html/body/ul[8]/li[5]">
             <source xml:lang="nl">Wanneer de werkgever de doelgroepvermindering jongeren vraagt voor de tewerkstelling in een andere regio, moet nog wel voldaan worden aan de jongerenverplichting over heel België (federaal). </source>
             <target xml:lang="de" state="final">Wenn der Arbeitgeber die Zielgruppenermäßigung Jugendliche für die Beschäftigung in einer anderen Region beantragt, ist nach wie vor die Jungarbeitnehmerverpflichtung für ganz Belgien (föderal) zu erfüllen. </target>
           </trans-unit>
