--- a/EMS/xliff/tests/Unit/Resources/Integrated/xliffs/6c9ef24519c3c5cfdde35103372375126b523a1f_1015191.xlf
+++ b/EMS/xliff/tests/Unit/Resources/Integrated/xliffs/6c9ef24519c3c5cfdde35103372375126b523a1f_1015191.xlf
@@ -137,62 +137,70 @@
             <target xml:lang="de" state="final">Der mindestens 62 Jahre alte Arbeitnehmer (am letzten Tag des Quartals) bis zum letzten Tag des Quartals, in dem er das gesetzliche Pensionsalter erreicht (65 Jahre) eröffnet das Recht auf eine Zielgruppenermäßigung <g ctype="x-html-strong">G<g ctype="x-html-sub">8</g></g>(1.500,00 EUR). </target>
           </trans-unit>
         </group>
+        <trans-unit restype="x-html-ul" id="/html/body/ul[5]">
+          <source xml:lang="nl"/>
+          <target xml:lang="de" state="final"/>
+        </trans-unit>
+        <trans-unit restype="x-html-ul" id="/html/body/ul[6]">
+          <source xml:lang="nl"/>
+          <target xml:lang="de" state="final"/>
+        </trans-unit>
         <trans-unit restype="x-html-h2" id="/html/body/h2[4]">
           <source xml:lang="nl"> Overgangsmaatregelen (met specifieke verminderingscode) </source>
           <target xml:lang="de" state="final"> Übergangsmaßnahmen (mit spezifischem Ermäßigungscode) </target>
         </trans-unit>
-        <group restype="x-html-ul" id="/html/body/ul[5]">
-          <group restype="listitem" id="/html/body/ul[5]/li[1]">
-            <trans-unit id="/html/body/ul[5]/li[1]/text()[1]">
+        <group restype="x-html-ul" id="/html/body/ul[7]">
+          <group restype="listitem" id="/html/body/ul[7]/li[1]">
+            <trans-unit id="/html/body/ul[7]/li[1]/text()[1]">
               <source xml:lang="nl">Er is een overgangsmaatregel voorzien voor de werknemers die op </source>
               <target xml:lang="de" state="final">Für die am </target>
             </trans-unit>
-            <trans-unit restype="x-html-strong" id="/html/body/ul[5]/li[1]/strong[1]">
+            <trans-unit restype="x-html-strong" id="/html/body/ul[7]/li[1]/strong[1]">
               <source xml:lang="nl">31 december 2018 in dienst</source>
               <target xml:lang="de" state="final">31. Dezember 2018 beschäftigten</target>
             </trans-unit>
-            <trans-unit id="/html/body/ul[5]/li[1]/text()[2]">
+            <trans-unit id="/html/body/ul[7]/li[1]/text()[2]">
               <source xml:lang="nl"> </source>
               <target xml:lang="de" state="final"> </target>
             </trans-unit>
-            <trans-unit restype="x-html-strong" id="/html/body/ul[5]/li[1]/strong[2]">
+            <trans-unit restype="x-html-strong" id="/html/body/ul[7]/li[1]/strong[2]">
               <source xml:lang="nl">én 54 jaar</source>
               <target xml:lang="de" state="final">Arbeitnehmer im Alter von 54 Jahren</target>
             </trans-unit>
-            <trans-unit id="/html/body/ul[5]/li[1]/text()[3]">
+            <trans-unit id="/html/body/ul[7]/li[1]/text()[3]">
               <source xml:lang="nl"> zijn en het recht kunnen openen op de doelgroepvermindering ouderen. Werkgevers met nadien in dienst genomen werknemers die op het einde van het kwartaal de leeftijd van 55 jaar niet bereikt hebben, kunnen voor deze werknemers vanaf 1 januari 2019 geen gebruik meer maken van de doelgroepvermindering 'oudere werknemers'. </source>
               <target xml:lang="de" state="final"> ist eine Übergangsmaßnahme geplant, die Anspruch auf die Zielgruppenermäßigung ältere Arbeitnehmer haben können. Arbeitgeber mit nach diesem Zeitpunkt beschäftigten Arbeitnehmern, die am Ende des Quartals noch nicht das Alter von 55 Jahren erreicht haben, können für diese Arbeitnehmer ab dem 01. Januar 2019 die Zielgruppenermäßigung ‚Ältere Arbeitnehmer‘ nicht mehr nutzen. </target>
             </trans-unit>
-            <group restype="x-html-ul" html:style="padding-top: 0px; padding-bottom: 0px;" id="/html/body/ul[5]/li[1]/ul">
-              <trans-unit restype="listitem" id="/html/body/ul[5]/li[1]/ul/li">
+            <group restype="x-html-ul" html:style="padding-top: 0px; padding-bottom: 0px;" id="/html/body/ul[7]/li[1]/ul">
+              <trans-unit restype="listitem" id="/html/body/ul[7]/li[1]/ul/li">
                 <source xml:lang="nl">Zij openen nog het recht op de vermindering <g ctype="x-html-strong">G<g ctype="x-html-sub">3</g></g> (300,00 EUR) tot en met het kwartaal voorafgaand aan het kwartaal dat ze 55 jaar worden, als hun refertekwartaalloon lager is dan 13.942,47 EUR. </source>
                 <target xml:lang="de" state="final">Sie haben noch Anspruch auf Ermäßigung <g ctype="x-html-strong">G<g ctype="x-html-sub">3</g></g> (300,00 EUR) bis einschließlich zum Quartal, das dem Quartal vorausgeht, in dem sie 55 Jahre alt werden, wenn ihr Referenzquartalslohn weniger als 13.942,47 EUR beträgt. </target>
               </trans-unit>
             </group>
           </group>
-          <group restype="listitem" id="/html/body/ul[5]/li[2]">
-            <trans-unit id="/html/body/ul[5]/li[2]/text()[1]">
+          <group restype="listitem" id="/html/body/ul[7]/li[2]">
+            <trans-unit id="/html/body/ul[7]/li[2]/text()[1]">
               <source xml:lang="nl">Er is een overgangsmaatregel voorzien voor de werknemers die op </source>
               <target xml:lang="de" state="final">Für die am </target>
             </trans-unit>
-            <trans-unit restype="x-html-strong" id="/html/body/ul[5]/li[2]/strong[1]">
+            <trans-unit restype="x-html-strong" id="/html/body/ul[7]/li[2]/strong[1]">
               <source xml:lang="nl">31 december 2018 in dienst</source>
               <target xml:lang="de" state="final">31. Dezember 2018 beschäftigten</target>
             </trans-unit>
-            <trans-unit id="/html/body/ul[5]/li[2]/text()[2]">
+            <trans-unit id="/html/body/ul[7]/li[2]/text()[2]">
               <source xml:lang="nl"> </source>
               <target xml:lang="de" state="final"> </target>
             </trans-unit>
-            <trans-unit restype="x-html-strong" id="/html/body/ul[5]/li[2]/strong[2]">
+            <trans-unit restype="x-html-strong" id="/html/body/ul[7]/li[2]/strong[2]">
               <source xml:lang="nl">én 58 jaar</source>
               <target xml:lang="de" state="final">Arbeitnehmer im Alter von 58 Jahren</target>
             </trans-unit>
-            <trans-unit id="/html/body/ul[5]/li[2]/text()[3]">
+            <trans-unit id="/html/body/ul[7]/li[2]/text()[3]">
               <source xml:lang="nl"> zijn en het recht kunnen openen op de doelgroepvermindering ouderen. </source>
               <target xml:lang="de" state="final"> ist eine Übergangsmaßnahme geplant, die Anspruch auf die Zielgruppenermäßigung ältere Arbeitnehmer haben können. </target>
             </trans-unit>
-            <group restype="x-html-ul" html:style="padding-top: 0px; padding-bottom: 0px;" id="/html/body/ul[5]/li[2]/ul">
-              <trans-unit restype="listitem" id="/html/body/ul[5]/li[2]/ul/li">
+            <group restype="x-html-ul" html:style="padding-top: 0px; padding-bottom: 0px;" id="/html/body/ul[7]/li[2]/ul">
+              <trans-unit restype="listitem" id="/html/body/ul[7]/li[2]/ul/li">
                 <source xml:lang="nl">Zij openen nog het recht op de vermindering <g ctype="x-html-strong">G<g ctype="x-html-sub">1</g></g> (1.000,00 EUR) tot en met het kwartaal voorafgaand aan het kwartaal dat ze 59 jaar worden, als hun refertekwartaalloon lager is dan 13.942,47 EUR. </source>
                 <target xml:lang="de" state="final">Sie haben noch Anspruch auf Ermäßigung <g ctype="x-html-strong">G<g ctype="x-html-sub">1</g></g> (1.000,00 EUR) bis einschließlich zum Quartal, das dem Quartal vorausgeht, in dem sie 59 Jahre alt werden, wenn ihr Referenzquartalslohn weniger als 13.942,47 EUR beträgt. </target>
               </trans-unit>
