--- a/EMS/xliff/tests/Unit/Resources/Integrated/xliffs/7a313fdeec39ec5234c567b807bddc07b1ad9836_1012237.xlf
+++ b/EMS/xliff/tests/Unit/Resources/Integrated/xliffs/7a313fdeec39ec5234c567b807bddc07b1ad9836_1012237.xlf
@@ -25,6 +25,18 @@
           <source xml:lang="nl"> <g ctype="lb"/> </source>
           <target xml:lang="de" state="final"> <g ctype="lb"/> </target>
         </trans-unit>
+        <trans-unit restype="x-html-p" id="/html/body/p[3]">
+          <source xml:lang="nl"/>
+          <target xml:lang="de" state="final"/>
+        </trans-unit>
+        <trans-unit restype="x-html-ul" id="/html/body/ul">
+          <source xml:lang="nl"/>
+          <target xml:lang="de" state="final"/>
+        </trans-unit>
+        <trans-unit restype="x-html-p" id="/html/body/p[4]">
+          <source xml:lang="nl"/>
+          <target xml:lang="de" state="final"/>
+        </trans-unit>
         <group restype="x-html-div" html:class="message alert" id="/html/body/div[1]">
           <trans-unit restype="x-html-h3" id="/html/body/div[1]/h3">
             <source xml:lang="nl"> Vlaams Gewest: </source>
@@ -35,6 +47,10 @@
             <target xml:lang="de" state="final"> Ab <g ctype="x-html-strong">01.07.2016</g> kann für Arbeitnehmer, die in <g ctype="x-html-strong">Flandern</g> beschäftigt werden, nicht mehr die ,Zielgruppenermäßigung ältere Arbeitnehmer‘ angewandt werden, sondern die ,<g ctype="x-html-a" html:href="%{BASE_URL_CURRENT}%/instructions/deductions/structuralreduction_targetgroupreductions/elderlyworkers_vl.html">Zielgruppenermäßigung ältere Arbeitnehmer – Flandern</g>‘. Es sind keine Übergangsmaßnahmen vorgesehen. </target>
           </trans-unit>
         </group>
+        <trans-unit restype="x-html-p" id="/html/body/p[5]">
+          <source xml:lang="nl"/>
+          <target xml:lang="de" state="final"/>
+        </trans-unit>
         <group restype="x-html-div" html:class="message alert" id="/html/body/div[2]">
           <trans-unit restype="x-html-h3" id="/html/body/div[2]/h3">
             <source xml:lang="nl"> Brussels Hoofdstedelijk Gewest: </source>
@@ -45,6 +61,14 @@
             <target xml:lang="de" state="final"> Ab <g ctype="x-html-strong">01.10.2016</g> kann für Arbeitnehmer, die in <g ctype="x-html-strong">Brüssel</g> beschäftigt werden, nicht mehr die ,Zielgruppenermäßigung ältere Arbeitnehmer‘ angewandt werden, sondern die ,<g ctype="x-html-a" html:href="%{BASE_URL_CURRENT}%/instructions/deductions/structuralreduction_targetgroupreductions/elderlyworkers_br.html">Zielgruppenermäßigung ältere Arbeitnehmer – Brüssel</g>‘. Es sind keine Übergangsmaßnahmen vorgesehen. </target>
           </trans-unit>
         </group>
+        <trans-unit restype="x-html-p" id="/html/body/p[6]">
+          <source xml:lang="nl"/>
+          <target xml:lang="de" state="final"/>
+        </trans-unit>
+        <trans-unit restype="x-html-p" id="/html/body/p[7]">
+          <source xml:lang="nl"/>
+          <target xml:lang="de" state="final"/>
+        </trans-unit>
         <group restype="x-html-div" html:class="message alert" id="/html/body/div[3]">
           <trans-unit restype="x-html-h3" id="/html/body/div[3]/h3">
             <source xml:lang="nl"> Waals Gewest (zonder de Duitstalige Gemeenschap): </source>
@@ -55,14 +79,30 @@
             <target xml:lang="de" state="final"> Ab <g ctype="x-html-strong">01.07.2017</g> kann für Arbeitnehmer, die in der <g ctype="x-html-strong">Wallonie</g> beschäftigt werden, nicht mehr die ,Zielgruppenermäßigung ältere Arbeitnehmer‘ angewandt werden, sondern die ,<g ctype="x-html-a" html:href="%{BASE_URL_CURRENT}%/instructions/deductions/structuralreduction_targetgroupreductions/elderlyworkers_wal.html">Zielgruppenermäßigung ältere Arbeitnehmer – Wallonie</g>‘. Es gelten Übergangsregelungen für 54-Jährige, die am 30. Juni 2017 beschäftigt sind. </target>
           </trans-unit>
         </group>
+        <trans-unit restype="x-html-p" id="/html/body/p[8]">
+          <source xml:lang="nl"/>
+          <target xml:lang="de" state="final"/>
+        </trans-unit>
+        <trans-unit restype="x-html-p" id="/html/body/p[9]">
+          <source xml:lang="nl"/>
+          <target xml:lang="de" state="final"/>
+        </trans-unit>
+        <trans-unit restype="x-html-h3" id="/html/body/h3">
+          <source xml:lang="nl"/>
+          <target xml:lang="de" state="final"/>
+        </trans-unit>
         <group restype="x-html-div" html:class="message alert" id="/html/body/div[4]">
           <trans-unit restype="x-html-h3" id="/html/body/div[4]/h3">
             <source xml:lang="nl"> Duitstalige Gemeenschap: </source>
             <target xml:lang="de" state="final"> Deutschsprachige Gemeinschaft: </target>
           </trans-unit>
-          <trans-unit restype="x-html-p" id="/html/body/div[4]/p">
+          <trans-unit restype="x-html-p" id="/html/body/div[4]/p[1]">
             <source xml:lang="nl"> Vanaf <g ctype="x-html-strong">1 januari 2019</g> kan voor werknemers die tewerkgesteld worden in het <g ctype="x-html-strong">Duitstalige landsgedeelte</g> niet langer de 'doelgroepvermindering oudere werknemers' toegepast worden maar wel de '<g ctype="x-html-a" html:href="%{BASE_URL_CURRENT}%/instructions/deductions/structuralreduction_targetgroupreductions/elderlyworkers_du.html">doelgroepvermindering oudere werknemers - Duitstalige Gemeenschap</g>'. Er zijn <g ctype="x-html-strong">overgangsmaatregelen met een specifieke verminderingscode</g> voorzien voor 54- en 58-jarigen in dienst op 31 december 2018. </source>
             <target xml:lang="de" state="final"> Ab <g ctype="x-html-strong">01. Januar 2019</g> kann für Arbeitnehmer, die im <g ctype="x-html-strong">deutschsprachigen Landesteil</g> beschäftigt werden, nicht mehr die ‚Zielgruppenermäßigung ältere Arbeitnehmer‘ angewandt werden, sondern die ‚<g ctype="x-html-a" html:href="%{BASE_URL_CURRENT}%/instructions/deductions/structuralreduction_targetgroupreductions/elderlyworkers_du.html">Zielgruppenermäßigung ältere Arbeitnehmer – Deutschsprachige Gemeinschaft</g>‘. Für die am 31. Dezember 2018 beschäftigten 54- und 58-Jährigen sind <g ctype="x-html-strong">Übergangsmaßnahmen mit einem spezifischen Ermäßigungscode</g> vorgesehen. </target>
+          </trans-unit>
+          <trans-unit restype="x-html-p" id="/html/body/div[4]/p[2]">
+            <source xml:lang="nl"/>
+            <target xml:lang="de" state="final"/>
           </trans-unit>
         </group>
         <trans-unit restype="lb" id="/html/body/br">
