--- a/EMS/xliff/tests/Unit/Resources/Integrated/xliffs/7fc03aac7ddb1ee2737bdd5fc7b53cca3f53ff5c_1017960.xlf
+++ b/EMS/xliff/tests/Unit/Resources/Integrated/xliffs/7fc03aac7ddb1ee2737bdd5fc7b53cca3f53ff5c_1017960.xlf
@@ -12,28 +12,36 @@
       </trans-unit>
       <group id="[introduction]">
         <trans-unit restype="x-html-p" id="/html/body/p[1]">
+          <source xml:lang="nl"/>
+          <target xml:lang="de" state="final"/>
+        </trans-unit>
+        <trans-unit restype="x-html-p" id="/html/body/p[2]">
           <source xml:lang="nl"> De wet van 2 april 2021 (BS van 13 april 2021) voorziet een bijdragevermindering voor de werkgevers die deel uitmaken van de evenementensector. Het doel bestaat erin deze sector te ondersteunen, die zwaar getroffen werd door de beperkende maatregelen tegen de verspreiding van het coronavirus. </source>
           <target xml:lang="de" state="final"> Das Gesetz vom 02. April 2021 (B.S. vom 13. April 2021) sieht eine Beitragsermäßigung für Arbeitgeber vor, die im Veranstaltungssektor tätig sind. Ziel ist es, diesen Sektor zu unterstützen, der von den Einschränkungen zur Verhinderung der Ausbreitung des Coronavirus stark betroffen ist. </target>
         </trans-unit>
-        <trans-unit restype="x-html-p" id="/html/body/p[2]">
-          <source xml:lang="nl"> Deze doelgroepvermindering kan toegekend worden tijdens het 2<g ctype="x-html-sup">de</g> en 3<g ctype="x-html-sup">de</g> kwartaal 2021. </source>
-          <target xml:lang="de" state="final"> Diese Zielgruppenermäßigung kann im 2. und 3. Quartal 2021 gewährt werden. </target>
-        </trans-unit>
         <trans-unit restype="x-html-p" id="/html/body/p[3]">
+          <source xml:lang="nl"> Deze doelgroepvermindering kan toegekend worden tijdens het 2<g ctype="x-html-sup">de</g> en 3<g ctype="x-html-sup">de</g> kwartaal 2021. </source>
+          <target xml:lang="de" state="final"> Diese Zielgruppenermäßigung kann im 2.<g ctype="x-html-sup"/> und 3.<g ctype="x-html-sup"/> Quartal 2021 gewährt werden. </target>
+        </trans-unit>
+        <trans-unit restype="x-html-p" id="/html/body/p[4]">
           <source xml:lang="nl">   </source>
           <target xml:lang="de" state="final">   </target>
         </trans-unit>
       </group>
       <group id="[description]">
+        <trans-unit restype="x-html-p" id="/html/body/p[1]">
+          <source xml:lang="nl"/>
+          <target xml:lang="de" state="final"/>
+        </trans-unit>
         <trans-unit restype="x-html-h2" html:id="h20" id="/html/body/h2[1]">
           <source xml:lang="nl"> Betrokken werkgevers </source>
           <target xml:lang="de" state="final"> Betroffene Arbeitgeber </target>
         </trans-unit>
-        <trans-unit restype="x-html-p" id="/html/body/p[1]">
+        <trans-unit restype="x-html-p" id="/html/body/p[2]">
           <source xml:lang="nl"> Het betreft de werkgevers uit de privésector waarvan de hoofdactiviteit zich situeert in de evenementensector. </source>
           <target xml:lang="de" state="final"> Es betrifft Arbeitgeber aus dem Privatsektor, die hauptsächlich im Veranstaltungssektor tätig sind. </target>
         </trans-unit>
-        <trans-unit restype="x-html-p" id="/html/body/p[2]">
+        <trans-unit restype="x-html-p" id="/html/body/p[3]">
           <source xml:lang="nl"> Concreet gaat het om de werkgevers </source>
           <target xml:lang="de" state="final"> Im Einzelnen sind dies die Arbeitgeber, </target>
         </trans-unit>
@@ -111,7 +119,7 @@
             </group>
           </group>
         </group>
-        <trans-unit restype="x-html-p" id="/html/body/p[3]">
+        <trans-unit restype="x-html-p" id="/html/body/p[4]">
           <source xml:lang="nl"> De werkgevers die niet vallen onder het PC 304 of de voormelde NACE-codes, maar die gelijkaardige activiteiten uitoefenen, kunnen ook van de maatregel genieten <g ctype="x-html-strong">als ze kunnen aantonen dat hun hoofdactiviteit zich in de evenementensector situeert</g>.  De RSZ zal a posteriori controles uitoefenen. </source>
           <target xml:lang="de" state="final"> Arbeitgeber, die nicht unter die PK 304 oder die oben genannten NACE-Codes fallen, aber ähnliche Tätigkeiten ausüben, können ebenfalls von der Maßnahme profitieren, <g ctype="x-html-strong">wenn sie nachweisen können, dass ihre Haupttätigkeit im Veranstaltungssektor angesiedelt ist</g>.  Das LSS wird nachträglich Kontrollen durchführen. </target>
         </trans-unit>
@@ -125,7 +133,7 @@
           <source xml:lang="nl"> Bijkomende voorwaarden </source>
           <target xml:lang="de" state="final"> Zusätzliche Bedingungen </target>
         </trans-unit>
-        <trans-unit restype="x-html-p" id="/html/body/p[4]">
+        <trans-unit restype="x-html-p" id="/html/body/p[5]">
           <source xml:lang="nl"> Om voor de doelgroepvermindering in aanmerking te komen, moet de werkgever aan de volgende bijkomende voorwaarden voldoen: </source>
           <target xml:lang="de" state="final"> Um die Zielgruppenermäßigung in Anspruch nehmen zu können, muss der Arbeitgeber die folgenden zusätzlichen Bedingungen erfüllen: </target>
         </trans-unit>
@@ -204,14 +212,14 @@
           </trans-unit>
           <trans-unit restype="listitem" id="/html/body/ul[2]/li[5]">
             <source xml:lang="nl">garanderen dat de som van het aantal dagen tijdelijke werkloosheid wegens overmacht coronavirus (prestatiecode 77) en het aantal dagen tijdelijke werkloosheid ingevolge gebrek aan werk wegens economische redenen (prestatiecode 71 en 76) die in de DmfA-aangifte zijn opgenomen voor het kwartaal waarvoor de vermindering gevraagd wordt, niet hoger is dan de som van dagen prestatiecode 71, 76 en 77 van het 1<g ctype="x-html-sup">ste</g> kwartaal 2021. </source>
-            <target xml:lang="de" state="final">gewährleisten, dass die Summe der Tage vorübergehender Arbeitslosigkeit aufgrund höherer Gewalt (Leistungscode 77) und der Tage vorübergehender Arbeitslosigkeit aufgrund von Arbeitsmangel aus wirtschaftlichen Gründen (Leistungscodes 71 und 76), die in der DmfA-Meldung für das Quartal, für das die Ermäßigung beantragt wird, enthalten sind, die Summe der Tage der Leistungscodes 71, 76 und 77 des 1. Quartals 2021 nicht überschreitet. </target>
+            <target xml:lang="de" state="final">gewährleisten, dass die Summe der Tage vorübergehender Arbeitslosigkeit aufgrund höherer Gewalt (Leistungscode 77) und der Tage vorübergehender Arbeitslosigkeit aufgrund von Arbeitsmangel aus wirtschaftlichen Gründen (Leistungscodes 71 und 76), die in der DmfA-Meldung für das Quartal, für das die Ermäßigung beantragt wird, enthalten sind, die Summe der Tage der Leistungscodes 71, 76 und 77 des 1.<g ctype="x-html-sup"/> Quartals 2021 nicht überschreitet. </target>
           </trans-unit>
         </group>
-        <trans-unit restype="x-html-p" id="/html/body/p[5]">
+        <trans-unit restype="x-html-p" id="/html/body/p[6]">
           <source xml:lang="nl"> De RSZ zal a posteriori controles op het naleven van de voorwaarden uitvoeren. </source>
           <target xml:lang="de" state="final"> Das LSS wird die Einhaltung der Bedingungen im Nachgang überprüfen. </target>
         </trans-unit>
-        <trans-unit restype="x-html-p" id="/html/body/p[6]">
+        <trans-unit restype="x-html-p" id="/html/body/p[7]">
           <source xml:lang="nl">   </source>
           <target xml:lang="de" state="final">   </target>
         </trans-unit>
@@ -219,13 +227,13 @@
           <source xml:lang="nl"> Bedrag van de vermindering </source>
           <target xml:lang="de" state="final"> Betrag der Ermäßigung </target>
         </trans-unit>
-        <trans-unit restype="x-html-p" id="/html/body/p[7]">
-          <source xml:lang="nl"> Het gaat om een doelgroepvermindering voor het <g ctype="x-html-strong">2<g ctype="x-html-sup">de</g> en 3<g ctype="x-html-sup">de</g> kwartaal 2021</g> die overeenstemt met het saldo van de patronale basisbijdragen in de DmfA van de genoemde kwartalen voor <g ctype="x-html-strong">maximum 5 werknemers.</g> </source>
-          <target xml:lang="de" state="final"> Es geht um die Zielgruppenermäßigung für das <g ctype="x-html-strong">2. und 3. Quartal 202</g>1, die dem Saldo der Basisarbeitgeberbeiträge in der DmfA der genannten Quartale für <g ctype="x-html-strong">maximal 5 Arbeitnehmer entspricht.</g> </target>
-        </trans-unit>
         <trans-unit restype="x-html-p" id="/html/body/p[8]">
+          <source xml:lang="nl"> Het gaat om een doelgroepvermindering voor het <g ctype="x-html-strong">2<g ctype="x-html-sup">de</g> en 3<g ctype="x-html-sup">de</g> kwartaal 2021</g> die overeenstemt met het saldo van de patronale basisbijdragen in de DmfA van de genoemde kwartalen voor <g ctype="x-html-strong">maximum 5 werknemers.</g> </source>
+          <target xml:lang="de" state="final"> Es geht um die Zielgruppenermäßigung für das <g ctype="x-html-strong">2.<g ctype="x-html-sup"/> und 3.<g ctype="x-html-sup"/> Quartal 202</g>1, die dem Saldo der Basisarbeitgeberbeiträge in der DmfA der genannten Quartale für <g ctype="x-html-strong">maximal 5 Arbeitnehmer entspricht.</g> </target>
+        </trans-unit>
+        <trans-unit restype="x-html-p" id="/html/body/p[9]">
           <source xml:lang="nl"> Deze doelgroepvermindering wordt aangevraagd via de gewone aangifte DmfA van het 2<g ctype="x-html-sup">de</g> en/of het 3<g ctype="x-html-sup">de</g> kwartaal 2021 met: </source>
-          <target xml:lang="de" state="final"> Diese Zielgruppenermäßigung wird über die reguläre DmfA-Meldung des 2. und/oder 3. Quartals 2021 beantragt: </target>
+          <target xml:lang="de" state="final"> Diese Zielgruppenermäßigung wird über die reguläre DmfA-Meldung des 2.<g ctype="x-html-sup"/> und/oder 3.<g ctype="x-html-sup"/> Quartals 2021 beantragt: </target>
         </trans-unit>
         <group restype="x-html-ul" id="/html/body/ul[3]">
           <trans-unit restype="listitem" id="/html/body/ul[3]/li[1]">
@@ -241,7 +249,7 @@
             <target xml:lang="de" state="final">und vorbehaltlich der nachträglichen Prüfung durch das LSS (hinsichtlich des Umfangs und der Bedingungen) angenommen. </target>
           </trans-unit>
         </group>
-        <trans-unit restype="x-html-p" id="/html/body/p[9]">
+        <trans-unit restype="x-html-p" id="/html/body/p[10]">
           <source xml:lang="nl"> Als uit de controles a posteriori blijkt dat de werkgever niet in het toepassingsgebied van de maatregel valt of de toekenningsvoorwaarden niet naleeft, dan annuleert de RSZ de vermindering in de DmfA-aangifte. </source>
           <target xml:lang="de" state="final"> Wenn eine nachträgliche Prüfung ergibt, dass der Arbeitgeber nicht in den Anwendungsbereich der Maßnahme fällt und die Bewilligungsbedingungen nicht erfüllt, wird die Ermäßigung in der DmfA-Meldung gestrichen. </target>
         </trans-unit>
