--- a/EMS/xliff/tests/Unit/Resources/Integrated/xliffs/859df5501bdcdff0716d24b5c732516e9cebd102_1017944.xlf
+++ b/EMS/xliff/tests/Unit/Resources/Integrated/xliffs/859df5501bdcdff0716d24b5c732516e9cebd102_1017944.xlf
@@ -79,6 +79,10 @@
             </trans-unit>
           </group>
         </group>
+        <trans-unit restype="x-html-ul" id="/html/body/ul[2]">
+          <source xml:lang="nl"/>
+          <target xml:lang="de" state="final"/>
+        </trans-unit>
         <trans-unit restype="x-html-h2" id="/html/body/h2[2]">
           <source xml:lang="nl"> Betrokken werknemers </source>
           <target xml:lang="de" state="final"> Betroffene Arbeitnehmer </target>
@@ -87,12 +91,12 @@
           <source xml:lang="nl"> Om als mentor te kunnen worden beschouwd, moet de werknemer </source>
           <target xml:lang="de" state="final"> Um als Mentor betrachtet zu werden, muss der Arbeitnehmer </target>
         </trans-unit>
-        <group restype="x-html-ul" id="/html/body/ul[2]">
-          <trans-unit restype="listitem" id="/html/body/ul[2]/li[1]">
+        <group restype="x-html-ul" id="/html/body/ul[3]">
+          <trans-unit restype="listitem" id="/html/body/ul[3]/li[1]">
             <source xml:lang="nl">een <g ctype="x-html-strong">beroepservaring</g> van minstens 5 jaar in het beroep kunnen voorleggen dat geheel of gedeeltelijk aangeleerd wordt in het kader van de stage of opleiding, en </source>
             <target xml:lang="de" state="final">mindestens fünf Jahre <g ctype="x-html-strong">Berufserfahrung</g> in dem Beruf nachweisen können, der ganz oder teilweise als Praktikum oder Ausbildung gelernt wird, und </target>
           </trans-unit>
-          <trans-unit restype="listitem" id="/html/body/ul[2]/li[2]">
+          <trans-unit restype="listitem" id="/html/body/ul[3]/li[2]">
             <source xml:lang="nl">in het bezit zijn van een <g ctype="x-html-strong">getuigschrift</g> 'mentor' uitgereikt door de bevoegde Gemeenschap, door een door de bevoegde Gemeenschap erkende instantie of door een door de Gemeenschap of door het bevoegd sectorfonds ingerichte of erkende opleidings- of onderwijsverstrekker. </source>
             <target xml:lang="de" state="final">im Besitz eines <g ctype="x-html-strong">Zeugnisses</g> als ‚Mentor‘ sein, das von der zuständigen Gemeinschaft, von einer von der zuständigen Gemeinschaft anerkannten Stelle oder von einem von der Gemeinschaft oder vom zuständigen Sektorfonds eingerichteten oder anerkannten Ausbildungs- oder Unterrichtsanbieter ausgestellt wurde. </target>
           </trans-unit>
@@ -108,7 +112,7 @@
           </trans-unit>
           <trans-unit restype="x-html-p" id="/html/body/div[2]/p">
             <source xml:lang="nl"> Het decreet van 20 juli 2016 houdende wijziging van verschillende wetgevingen in verband met de alternerende opleiding, schaft met ingang van 1 september 2016 deze bijdragevermindering af voor werknemers tewerkgesteld in <g ctype="x-html-strong">Wallonië</g> (met uitzondering van de Duitstalige Gemeenschap). Gezien de DmfA-aangifte op kwartaalbasis gebeurt, wordt aanvaard dat deze vermindering berekend wordt op basis van de voor het ganse 3<g ctype="x-html-sup">de</g> kwartaal 2016 aangegeven  loon- en prestatiegegevens (dus met inbegrip van de maand september). Vanaf het <g ctype="x-html-strong">4<g ctype="x-html-sup">de</g> kwartaal van 2016</g> mag deze vermindering niet meer toegepast worden. </source>
-            <target xml:lang="de" state="final"> Durch das Dekret vom <g ctype="x-html-strong">20.07.2016</g> zur Änderung der verschiedenen Gesetzgebungen in Verbindung mit der alternierenden Ausbildung wird diese Beitragsermäßigung mit Wirkung vom 01.09.2016 für Arbeitnehmer, die in der Wallonie beschäftigt sind (mit Ausnahme der Deutschsprachigen Gemeinschaft), abgeschafft. Da die DmfA-Meldung auf Quartalsbasis erfolgt, wird davon ausgegangen, dass diese Ermäßigung auf der Grundlage der für das gesamte 3. Quartal 2016 gemeldeten Lohn- und Leistungsangaben (d. h. einschließlich des Monats September) berechnet wird. Ab dem vierten Quartal 2016 darf diese Ermäßigung nicht mehr angewandt werden. </target>
+            <target xml:lang="de" state="final"> Durch das Dekret vom <g ctype="x-html-strong">20.07.2016</g> zur Änderung der verschiedenen Gesetzgebungen in Verbindung mit der alternierenden Ausbildung wird diese Beitragsermäßigung mit Wirkung vom 01.09.2016 für Arbeitnehmer, die in der Wallonie beschäftigt sind (mit Ausnahme der Deutschsprachigen Gemeinschaft), abgeschafft. Da die DmfA-Meldung auf Quartalsbasis erfolgt, wird davon ausgegangen, dass diese Ermäßigung auf der Grundlage der für das gesamte 3. Quartal 2016 gemeldeten Lohn- und Leistungsangaben (d. h. einschließlich des Monats September) berechnet wird. <g ctype="x-html-sup"/> Ab dem vierten Quartal 2016 darf diese Ermäßigung nicht mehr angewandt werden. <g ctype="x-html-strong"><g ctype="x-html-sup"/></g> </target>
           </trans-unit>
         </group>
         <group restype="x-html-div" html:class="message alert" id="/html/body/div[3]">
@@ -124,6 +128,10 @@
         <trans-unit restype="x-html-p" id="/html/body/p[5]">
           <source xml:lang="nl">   </source>
           <target xml:lang="de" state="final">   </target>
+        </trans-unit>
+        <trans-unit restype="x-html-ul" id="/html/body/ul[4]">
+          <source xml:lang="nl"/>
+          <target xml:lang="de" state="final"/>
         </trans-unit>
         <trans-unit restype="x-html-h2" id="/html/body/h2[3]">
           <source xml:lang="nl"> Bedrag van de vermindering </source>
@@ -199,20 +207,20 @@
           <source xml:lang="nl"> De werkgever maakt tot 31 december 2014 aan de Algemene Directie Werkgelegenheid en Arbeidsmarkt FOD WASO volgende gegevens over: </source>
           <target xml:lang="de" state="final"> Der Arbeitgeber übermittelt der Generaldirektion Beschäftigung und Arbeitsmarkt des FÖD BASK bis 31.12.2014 folgende Unterlagen: </target>
         </trans-unit>
-        <group restype="x-html-ul" id="/html/body/ul[3]">
-          <trans-unit restype="listitem" id="/html/body/ul[3]/li[1]">
+        <group restype="x-html-ul" id="/html/body/ul[5]">
+          <trans-unit restype="listitem" id="/html/body/ul[5]/li[1]">
             <source xml:lang="nl">een kopie van overeenkomst (indien nodig) </source>
             <target xml:lang="de" state="final">eine Kopie des Vertrags (falls erforderlich) </target>
           </trans-unit>
-          <trans-unit restype="listitem" id="/html/body/ul[3]/li[2]">
+          <trans-unit restype="listitem" id="/html/body/ul[5]/li[2]">
             <source xml:lang="nl">een lijst van de mentors die hij tewerkstelt </source>
             <target xml:lang="de" state="final">eine Liste der von ihm beschäftigten Mentoren </target>
           </trans-unit>
-          <trans-unit restype="listitem" id="/html/body/ul[3]/li[3]">
+          <trans-unit restype="listitem" id="/html/body/ul[5]/li[3]">
             <source xml:lang="nl">voor elke mentor het bewijs van minimale praktijkervaring </source>
             <target xml:lang="de" state="final">für jeden Mentor den Nachweis über die minimale praktische Erfahrung </target>
           </trans-unit>
-          <trans-unit restype="listitem" id="/html/body/ul[3]/li[4]">
+          <trans-unit restype="listitem" id="/html/body/ul[5]/li[4]">
             <source xml:lang="nl">voor elke mentor een kopie van het getuigschrift mentor </source>
             <target xml:lang="de" state="final">für jeden Mentor eine Kopie des Mentor-Zeugnisses </target>
           </trans-unit>
